--- a/src/main/resources/templates/thymeleaf/fo/about/customerService.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/customerService.html
@@ -97,7 +97,7 @@
 							<div class="is-label pb_10">
 								<button type="button" class="sech-btn" onclick="selectBrdList('FA','All');">전체</button>
 								<button type="button" class="sech-btn" onclick="selectBrdList('FA','UP');">이용정책</button>
-								<!--<button type="button" class="sech-btn" onclick="selectBrdList('FA','CO');">공통</button>-->
+								<button type="button" class="sech-btn" onclick="selectBrdList('FA','CO');">공통</button>
 								<button type="button" class="sech-btn" onclick="selectBrdList('FA','PU');">구매</button>
 								<button type="button" class="sech-btn" onclick="selectBrdList('FA','SA');">판매</button>
 								<button type="button" class="sech-btn" onclick="selectBrdList('FA','TR');">운송</button>
