--- a/src/main/resources/templates/thymeleaf/fo/about/terms_1.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/terms_1.html
@@ -2,7 +2,9 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head>
-	
+
+<link rel="icon" type="image/png" href="/resources/img/favicon.png">
+
 </head>
 
 <body>
