--- a/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
@@ -110,6 +110,7 @@ jQuery(document).ready(function() {
 });   
 
 function myCollectionList(){
+	console.log(result);
     if(result.length > 0){
 		var html = "";
     	
@@ -124,13 +125,13 @@ function myCollectionList(){
     		//경매 - 겨래진행중
 			if(result[i].dealTypCd == "A" && result[i].dealSttsCd == "TP"){
 				
-				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;">';
+				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;" onclick="biddingMove('+result[i].workSq+')">';
 				html += '<div>';
-				html += '<div class="item-div-img active-on">';
+				html += '<div class="item-div-img active-on" style="cursor:pointer">';
 				//작품 이미지
 				html += '	<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				
-				html += '		<div class="item-ho">';
+				html += '		<div class="item-ho" >';
 				html += '			<p>'+ result[i].dealStrtDate +' - '+ result[i].dealEndngDate +'</p>';
  				html += '			<p> 응찰수 : '+ result[i].bidCnt +'</p>';
  				html += '			<ul class="dealCount" dday="'+result[i].dealEndngDateTime+'"></ul>';
@@ -203,10 +204,10 @@ function myCollectionList(){
 			//판매 - 거래진행중
 			if(result[i].dealTypCd == "S" && result[i].dealSttsCd == "TP"){
 				
-				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;">';
+				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;" onclick="biddingMove('+result[i].workSq+')">';
 				html += '<div>';
 				//작품 이미지
-				html += '<div class="item-div-img sale-on">';
+				html += '<div class="item-div-img sale-on" style="cursor:pointer">';
 				html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				html += '		<div class="item-ho2 sale-div">';
 	 			html += '			<h3>판매중</h3>';
@@ -307,6 +308,7 @@ function myCollectionList(){
 			html += '		<div class="regs" >';
 			html += '			<a href="#" class="reg-a" workSq="'+ result[i].workSq +'" onclick="dealReg(this)"><span>거래 등록</span></a>';
 			html += '			<a href="#" class="cor-a" workSq="'+ result[i].workSq +'" onclick="collectionMod(this)"><span>소장품 수정</span></a>';
+			html += '			<a href="javascript:workDetailMove('+ result[i].workSq +')" ><span>상세보기</span></a>';
 			html += '		</div>';
 			html += '	</div>';
 			html += '</div>';
@@ -489,6 +491,31 @@ $(document).on("click", ".heart", function(){
 		imagesLoaded( '.grid' ).on( 'progress', function() {
 			msnry.layout();
 		});
+  	}
+     
+     
+  	function workDetailMove(workSq) {
+  		
+  		pageGoPost({
+  			url:"/workDetail",
+  			target:"_self",
+  			vals:[
+  				["workSq", workSq]
+  			]
+  		});
+  		
+  	}
+
+  	function biddingMove(workSq) {
+  		
+  		pageGoPost({
+  			url:"/bidding",
+  			target:"_self",
+  			vals:[
+  				["workSq", workSq]
+  			]
+  		});
+  		
   	}
 </script>
     
