--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -5242,3 +5242,7 @@ position: relative;background-color: #fbfbfb;}
     font-weight: 400;
     color:#000;
 }
+
+/*0623*/
+.rad-mg-1{margin-top:30px; margin-bottom:0; text-align: right;}
+.text-box1 { margin-top:13px; font-size:1.5rem; }
