--- a/src/main/resources/static/css/ui_tablet.css
+++ b/src/main/resources/static/css/ui_tablet.css
@@ -5416,3 +5416,8 @@ p.dib{display:inline-block !important;}
     font-weight: 400;
     color:#000;
 }
+
+/*0623*/
+.rad-mg-1{margin-top:30px; margin-bottom:0; text-align: right;}
+.text-box1 { margin-top:13px; font-size:1.5rem; }
+.t_font-size { font-size:1.5rem !important; }
