--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -616,9 +616,9 @@
 	     					//경매 - 겨래진행중
 	     					if(dealList[i].dealTypCd == "A" && dealList[i].dealSttsCd == "TP"){
 	     						
-	     						html += '<div class="griditem '+gtText+'" style="border:0px solid #222;">';
-		     					html += '<div  >';
-		     					html += '<div class="item-div-img active" onclick="workDetail('+ dealList[i].workSq +')">'
+	     						html += '<div class="griditem '+gtText+'" style="border:0px solid #222;" >';
+		     					html += '<div>';
+		     					html += '<div class="item-div-img active" onclick="workDetail('+ dealList[i].workSq +')" style="cursor:pointer">'
 		     					//작품 이미지
 		     					html += '<img src="'+ dealList[i].workMainImgUrl +'" class="pseudo-img" width="360px;"  style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 		     					
@@ -685,7 +685,7 @@
 	     						html += '<div class="griditem '+gtText+'" style="border:0px solid #222;">';
 		     					html += '<div>';
 		     					//작품 이미지
-		     					html += '<div class="item-div-img sale" onclick="workDetail('+ dealList[i].workSq +')">';
+		     					html += '<div class="item-div-img sale" onclick="workDetail('+ dealList[i].workSq +')"  style="cursor:pointer">';
 		     					html += '<img src="'+ dealList[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 		     					html += '		<div class="item-ho2 sale-div">';
 		    	     			html += '			<h3>판매중</h3>';
