--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -340,7 +340,7 @@ function onload(sort, type){
 				
 				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;">';
 				html += '<div>';
-				html += '<div class="item-div-img active" onclick="dealDetail('+ result[i].workSq +')">';
+				html += '<div class="item-div-img active" onclick="dealDetail('+ result[i].workSq +')" style="cursor:pointer">';
 				//작품 이미지
 				html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;" >';
 				//마우스 호버 부분
@@ -400,7 +400,7 @@ function onload(sort, type){
 				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;">';
 				html += '<div>';
 				//작품 이미지
-				html += '<div class="item-div-img sale" onclick="dealDetail('+ result[i].workSq +')">';
+				html += '<div class="item-div-img sale" onclick="dealDetail('+ result[i].workSq +')" style="cursor:pointer">';
 				html += '<img src="'+ result[i].workMainImgUrl +'" class="pseudo-img" style="max-width:360px; max-height:600px; width:100%; height:100%;">';
 				html += '		<div class="item-ho2 sale-div">';
      			html += '			<h3>판매중</h3>';
