--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -113,7 +113,7 @@
 						</li>
 						<li>
 							<img src="resources/img/img-5.png" />
-							<p class="da-p1">간편매물 등록</p>
+							<p class="da-p1">간편 작품 등록</p>
 							<p class="da-p2 pc-on">보증서만 업로드 하면<br/>딜링아트에서 입력해 드립니다.</p>
 							<p class="da-p2 ta-on">보증서만 업로드 하면<br/>정보를 입력해 드립니다.</p>
 						</li>
