--- a/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
@@ -164,10 +164,12 @@
 											<div class="filebox bs3-primary">
 												<!-- <input class="upload-name" value="파일선택" disabled> -->
 												<th:block th:if="${not #strings.isEmpty(result.work.workGrtUrl)}">
-													<img class="content" id="workGrtUrl1" style="cursor:pointer" th:src="${result.work.workGrtUrl}"/>
+													<!-- <img class="content" id="workGrtUrl1" style="cursor:pointer" th:src="${result.work.workGrtUrl}"/> -->
+													<input type="text" id="workGrtUrl1" class="input-4" th:value="${result.work.workGrtUrl}" disabled>
 												</th:block>
 												<th:block th:unless="${not #strings.isEmpty(result.work.workGrtUrl)}">
-													<img class="content" id="workGrtUrl1" style="cursor:pointer"/>
+													<!-- <img class="content" id="workGrtUrl1" style="cursor:pointer"/> -->
+													<input type="text" id="workGrtUrl1" class="input-4" disabled>
 												</th:block>
 												<label for="workGrtUrl">찾아보기</label> 
 												<input type="file" id="workGrtUrl" class="upload-hidden" accept=".jpeg, .jpg, .png, .pdf" th:value="${result.work.workGrtUrl}"> 
@@ -188,16 +190,17 @@
 										<th><span class="my-red">사이즈</span></th>
 										<td>
 											<div class="coll-gr">
-												<input type="text" class="input-4" id="workSizeWidth" th:value="${result.work.workSizeWidth}"/>
+												<input type="text" class="input-4" id="workSizeWidth" th:value="${result.work.workSizeWidth}" onblur="autoLake()"/>
 												<span class="cg-x">X</span> 
-												<input type="text" class="input-4" id="workSizeDepth" th:value="${result.work.workSizeDepth}"/>
-												<!-- <span class="cg-text">cm 37호 입니다</span> -->
+												<input type="text" class="input-4" id="workSizeDepth" th:value="${result.work.workSizeDepth}" onblur="autoLake()"/>
+												<span class="cg-text" id="workLake" th:if="${not #strings.isEmpty(result.work.workLake)}" th:utext="|<br/>${result.work.workLake}호 입니다.|">
+												</span>
+												<span class="cg-text" id="workLake" th:unless="${not #strings.isEmpty(result.work.workLake)}">
+													<br/>작품 사이즈를 입력하시면 호수가 자동으로 계산됩니다. 
+												</span>
+												<img src="/resources/img/ba/me-icon.png" style="cursor:pointer;" onclick="openLakeHelp()"></img>
 											</div>
 										</td>
-									</tr>
-									<tr>
-										<th><span class="my-red">호수</span></th>
-										<td><input type="text" class="input-4" id="workLake" th:value="${result.work.workLake}"/></td>
 									</tr>
 									<tr>
 										<th><span class="my-red">소재/기법</span></th>
@@ -212,7 +215,8 @@
 										<td>
 											<div class="filebox bs3-primary">
 												<!-- <input class="upload-name" value="파일선택" disabled="disabled"> -->
-												<img class="content" id="workImgLefUrl1" style="cursor:pointer" th:src="${result.work.workImgLefUrl}"/>
+												<img class="content" id="workImgLefUrl1" style="cursor:pointer" th:if="${not #strings.isEmpty(result.work.workImgLefUrl)}" th:src="${result.work.workImgLefUrl}"/>
+												<img class="content" id="workImgLefUrl1" style="cursor:pointer" th:unless="${not #strings.isEmpty(result.work.workImgLefUrl)}"/>
 												<label for="workImgLefUrl">찾아보기</label> 
 												<input type="file" id="workImgLefUrl" class="upload-hidden" th:value="${result.work.workImgLefUrl}"> 
 											</div>
@@ -228,7 +232,8 @@
 										<td>
 											<div class="filebox bs3-primary">
 												<!-- <input class="upload-name" value="파일선택" disabled> -->
-												<img class="content" id="workImgRitUrl1" style="cursor:pointer" th:src="${result.work.workImgRitUrl}"/>
+												<img class="content" id="workImgRitUrl1" style="cursor:pointer" th:if="${not #strings.isEmpty(result.work.workImgRitUrl)}" th:src="${result.work.workImgRitUrl}"/>
+												<img class="content" id="workImgRitUrl1" style="cursor:pointer" th:unless="${not #strings.isEmpty(result.work.workImgRitUrl)}"/>
 												<label for="workImgRitUrl">찾아보기</label> 
 												<input type="file" id="workImgRitUrl" class="upload-hidden" th:value="${result.work.workImgRitUrl}"> 
 											</div>
@@ -244,7 +249,8 @@
 										<td>
 											<div class="filebox bs3-primary">
 												<!-- <input class="upload-name" value="파일선택" disabled="disabled"> -->
-												<img class="content" id="workImgTopUrl1" style="cursor:pointer" th:src="${result.work.workImgTopUrl}"/>
+												<img class="content" id="workImgTopUrl1" style="cursor:pointer" th:if="${not #strings.isEmpty(result.work.workImgTopUrl)}" th:src="${result.work.workImgTopUrl}"/>
+												<img class="content" id="workImgTopUrl1" style="cursor:pointer" th:unless="${not #strings.isEmpty(result.work.workImgTopUrl)}"/>
 												<label for="workImgTopUrl">찾아보기</label> 
 												<input type="file" id="workImgTopUrl" class="upload-hidden" th:value="${result.work.workImgTopUrl}"> 
 											</div>
@@ -260,7 +266,8 @@
 										<td>
 											<div class="filebox bs3-primary">
 												<!-- <input class="upload-name" value="파일선택" disabled="disabled"> -->
-												<img class="content" id="workImgBotUrl1" style="cursor:pointer" th:src="${result.work.workImgBotUrl}"/>
+												<img class="content" id="workImgBotUrl1" style="cursor:pointer" th:if="${not #strings.isEmpty(result.work.workImgBotUrl)}" th:src="${result.work.workImgBotUrl}"/>
+												<img class="content" id="workImgBotUrl1" style="cursor:pointer" th:unless="${not #strings.isEmpty(result.work.workImgBotUrl)}"/>
 												<label for="workImgBotUrl">찾아보기</label> 
 												<input type="file" id="workImgBotUrl" class="upload-hidden" th:value="${result.work.workImgBotUrl}"> 
 											</div>
@@ -583,7 +590,132 @@
 		</div>
 	</div>
 </div>
+<!-- 호수 안내표 -->
+<!-- table -->
+<div class="modal fade modal-s" id="lakeHelpModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-baeg max-w480" style="max-width:600px !important;">
+		<div class="modal-content">
+			<div class="modal-header" style="padding: 0;min-height: 0;height: 0;">
+				<div class="baegs">
+				    <div class="close" onclick="closeLakeHelp()"><img src="/resources/img/ba/icon-end.png" /></div>
+				</div>
+			</div>
+			<div class="modal-body login-body">
 
+				<div class="login-box" style="margin-top:30px;">
+					<p class="lb-p1">작품 사이즈 기준표 (cm)</p>
+					<div class="text-box1">
+						
+						<table class="tstyle4">
+							<tr>
+								<th>호수</th>
+								<th>F형 (인물)</th>
+							</tr>
+							<tr>
+								<td>0</td>
+								<td>18.0 x 14.0</td>
+							</tr>
+							<tr>
+								<td>1</td>
+								<td>22.7 x 15.8</td>
+							</tr>
+							<tr>
+								<td>2</td>
+								<td>25.8 x 17.9</td>
+							</tr>
+							<tr>
+								<td>3</td>
+								<td>27.3 x 22.0</td>
+							</tr>
+							<tr>
+								<td>4</td>
+								<td>33.4 x 24.2</td>
+							</tr>
+							<tr>
+								<td>5</td>
+								<td>34.8 x 27.3</td>
+							</tr>
+							<tr>
+								<td>6</td>
+								<td>40.9 x 31.8</td>
+							</tr>
+							<tr>
+								<td>8</td>
+								<td>45.5 x 37.9</td>
+							</tr>
+							<tr>
+								<td>10</td>
+								<td>53.0 x 45.0</td>
+							</tr>
+							<tr>
+								<td>12</td>
+								<td>60.6 x 50.0</td>
+							</tr>
+							<tr>
+								<td>15</td>
+								<td>65.1 x 53.0</td>
+							</tr>
+							<tr>
+								<td>20</td>
+								<td>72.7 x 60.6</td>
+							</tr>
+							<tr>
+								<td>25</td>
+								<td>80.3 x 65.1</td>
+							</tr>
+							<tr>
+								<td>30</td>
+								<td>90.9 x 72.7</td>
+							</tr>
+							<tr>
+								<td>40</td>
+								<td>100.0 x 80.3</td>
+							</tr>
+							<tr>
+								<td>50</td>
+								<td>116.8 x 91.0</td>
+							</tr>
+							<tr>
+								<td>60</td>
+								<td>130.3 x 97.0</td>
+							</tr>
+							<tr>
+								<td>80</td>
+								<td>145.5 x 112.1</td>
+							</tr>
+							<tr>
+								<td>100</td>
+								<td>162.2 x 130.3</td>
+							</tr>
+							<tr>
+								<td>120</td>
+								<td>193.9 x 130.3</td>
+							</tr>
+							<tr>
+								<td>150</td>
+								<td>227.3 x 181.8</td>
+							</tr>
+							<tr>
+								<td>200</td>
+								<td>259.1 x 193.9</td>
+							</tr>
+							<tr>
+								<td>300</td>
+								<td>290.9 x 218.2</td>
+							</tr>
+							<tr>
+								<td>500</td>
+								<td>333.3 x 248.5</td>
+							</tr>
+						</table>
+
+					</div>
+					
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 
 
 <script th:inline="javascript">
@@ -595,6 +727,11 @@ $(function() {
 var result = /*[[${result}]]*/ 'default';
 var deal = new Object();
 result.deal = deal;
+
+$("#workGrtUrl").change(function(){
+	$("#workGrtUrl1").val(this.value);
+});
+
 jQuery(document).ready(function() {
 	$('.datepicker').datepicker();
 	$("#dealStrtDt").calendar($("#dealEndngDt"));
@@ -617,7 +754,7 @@ jQuery(document).ready(function() {
         dropdown: true,
         scrollbar: true
     });
-    
+    autoLake();
 	
 });
 
@@ -666,7 +803,109 @@ $.datepicker.setDefaults({
 	showMonthAfterYear: true,
 	yearSuffix: '년'
 });
-
+//호수 계산
+function autoLake(){
+	var width = $("#workSizeWidth").val();
+	var depth = $("#workSizeDepth").val();
+	var lake = "";
+	if(width != null && width != "" && depth != null && depth != ""){
+		if(width >= 18.0 && depth >= 14.0){
+			lake = 0;
+		}
+		if(width >= 22.7 && depth >= 15.8){
+			lake = 1;
+		}
+		if(width >= 25.8 && depth >= 17.9){
+			lake = 2;
+		}
+		if(width >= 27.3 && depth >= 22.0){
+			lake = 3;
+		}
+		if(width >= 33.4 && depth >= 24.2){
+			lake = 4;
+		}
+		if(width >= 34.8 && depth >= 27.3){
+			lake = 5;
+		}
+		if(width >= 40.9 && depth >= 31.8){
+			lake = 6;
+		}
+		if(width >= 45.5 && depth >= 37.9){
+			lake = 8;
+		}
+		if(width >= 53.0 && depth >= 45.0){
+			lake = 10;
+		}
+		if(width >= 60.6 && depth >= 50.0){
+			lake = 12;
+		}
+		if(width >= 65.1 && depth >= 53.0){
+			lake = 15;
+		}
+		if(width >= 72.7 && depth >= 60.6){
+			lake = 20;
+		}
+		if(width >= 80.3 && depth >= 65.1){
+			lake = 25;
+		}
+		if(width >= 90.9 && depth >= 72.7){
+			lake = 30;
+		}
+		if(width >= 100.0 && depth >= 80.3){
+			lake = 40;
+		}
+		if(width >= 116.8 && depth >= 91.0){
+			lake = 50;
+		}
+		if(width >= 100.0 && depth >= 80.3){
+			lake = 40;
+		}
+		if(width >= 116.8 && depth >= 91.0){
+			lake = 50;
+		}
+		if(width >= 130.3 && depth >= 97.0){
+			lake = 60;
+		}
+		if(width >= 145.5 && depth >= 112.1){
+			lake = 80;
+		}
+		if(width >= 162.2 && depth >= 130.3){
+			lake = 100;
+		}
+		if(width >= 193.9 && depth >= 130.3){
+			lake = 120;
+		}
+		if(width >= 227.3 && depth >= 181.8){
+			lake = 150;
+		}
+		if(width >= 259.1 && depth >= 193.9){
+			lake = 200;
+		}
+		if(width >= 290.9 && depth >= 218.2){
+			lake = 300;
+		}
+		if(width >= 333.3 && depth >= 248.5){
+			lake = 500;
+		}
+		$("#workLake").html("<br/>"+lake+"호 입니다.");
+		result.work.workLake = lake;
+		
+	}else{
+		$("#workLake").html("<br/>작품 사이즈를 입력하시면 호수가 자동으로 계산됩니다.");
+		result.work.workLake = "";
+	}
+}
+//호수 안내 팝업 오픈
+function openLakeHelp(){
+	$('body').css("overflow", "hidden");
+	$('#lakeHelpModal').modal({backdrop: 'static', keyboard: false})  
+	$("#lakeHelpModal").modal("show");
+}
+//호수 안내 팝업 닫기
+function closeLakeHelp(){
+	$('body').css("overflow", "scroll");
+	$("#lakeHelpModal").modal("hide");
+}
 function searchAddr(){
 	new daum.Postcode({
     	oncomplete: function(data) { //선택시 입력값 세팅
@@ -791,7 +1030,7 @@ function vaild(){
 		modalAlertShow("배송 시작 휴대전화 번호가 입력되지 않았습니다.");
 		return false;
 	}
-	if($("#workGrtUrl1").attr("src") == null || $("#workGrtUrl1").attr("src") == ""){
+	if($("#workGrtUrl1").val() == null || $("#workGrtUrl1").val() == ""){
 		modalAlertShow("작품 보증서가 업로드되지 않았습니다.");
 		return false;
 	}
@@ -799,8 +1038,18 @@ function vaild(){
 		modalAlertShow("작품 소장가가 입력되지 않았습니다.");
 		return false;
 	}
-	if(result.work.workLake == null || result.work.workLake == ""){
+	/* if(result.work.workLake == null || result.work.workLake == ""){
 		modalAlertShow("호수가 입력되지 않았습니다.");
+		return false;
+	} */
+	
+	if(result.work.workSizeWidth == null || result.work.workSizeWidth == ""){
+		modalAlertShow("사이즈(가로)가 입력되지 않았습니다!", "workSizeWidth");
+		return false;
+	}
+	
+	if(result.work.workSizeDepth == null || result.work.workSizeDepth == ""){
+		modalAlertShow("사이즈(세로)가 입력되지 않았습니다!", "workSizeDepth");
 		return false;
 	}
 	if(result.work.workMatrl == null || result.work.workMatrl == ""){
@@ -892,7 +1141,9 @@ function dealRegNotesModal(){
 	result.deal.artstSq = result.work.artstSq;
 	result.deal.workSq = result.work.workSq.toString();
 	result.deal.dealSttsCd = "TP";
-	result.work.workLake = $("#workLake").val();
+	//result.work.workLake = $("#workLake").val();
+	result.work.workSizeWidth = $("#workSizeWidth").val();
+	result.work.workSizeDepth = $("#workSizeDepth").val();
 	result.work.workMatrl = $("#workMatrl").val();
 	result.work.workProdcYear = $("#workProdcYear").val();
 	
@@ -919,26 +1170,53 @@ function dealReg(){
 	}else{
 		
 		const formData = new FormData();
+		
 		//보증서
 		const workGrtUrl = document.getElementById("workGrtUrl");
-		formData.append("workGrtUrl", workGrtUrl.files[0]);
-		//작품사진 좌우상하
+		if(workGrtUrl.files[0] == null && $("#workGrtUrl1").val() != null){
+			result.work.workGrtUrl = $("#workGrtUrl1").val();
+		}else{
+			if(workGrtUrl.files[0] != null){
+				formData.append("workGrtUrl", workGrtUrl.files[0]);
+			}
+		}
+		//작품 사진 좌
 		const workImgLefUrl = document.getElementById("workImgLefUrl");
+		if(workImgLefUrl.files[0] == null && $("#workImgLefUrl1").attr("src") != null){
+			result.work.workImgLefUrl = $("#workImgLefUrl1").attr("src");
+		}else{
+			if(workImgLefUrl.files[0] != null){
+				formData.append("workImgLefUrl", workImgLefUrl.files[0]);
+			}
+		}
+		//작품 사진 우
 		const workImgRitUrl = document.getElementById("workImgRitUrl");
+		if(workImgRitUrl.files[0] == null && $("#workImgRitUrl1").attr("src") != null){
+			result.work.workImgRitUrl = $("#workImgRitUrl1").attr("src");
+		}else{
+			if(workImgRitUrl.files[0] != null){
+				formData.append("workImgRitUrl", workImgRitUrl.files[0]);
+			}
+		}
+		//작품 사진 상
 		const workImgTopUrl = document.getElementById("workImgTopUrl");
+		if(workImgTopUrl.files[0] == null && $("#workImgTopUrl1").attr("src") != null){
+			work.workImgTopUrl = $("#workImgTopUrl1").attr("src");
+		}else{
+			if(workImgTopUrl.files[0] != null){
+				formData.append("workImgTopUrl", workImgTopUrl.files[0]);
+			}
+		}
+		//작품 사진 하
 		const workImgBotUrl = document.getElementById("workImgBotUrl");
-		if(workImgLefUrl.files[0] != null){
-			formData.append("workImgLefUrl", workImgLefUrl.files[0]);
+		if(workImgBotUrl.files[0] == null && $("#workImgBotUrl1").attr("src") != null){
+			result.work.workImgBotUrl = $("#workImgBotUrl1").attr("src");
+		}else{
+			if(workImgBotUrl.files[0] != null){
+				formData.append("workImgBotUrl", workImgBotUrl.files[0]);
+			}
 		}
-		if(workImgRitUrl.files[0] != null){
-			formData.append("workImgRitUrl", workImgRitUrl.files[0]);
-		}
-		if(workImgTopUrl.files[0] != null){
-			formData.append("workImgTopUrl", workImgTopUrl.files[0]);
-		}
-		if(workImgBotUrl.files[0] != null){
-			formData.append("workImgBotUrl", workImgBotUrl.files[0]);
-		}
+		
 	    formData.append("param", new Blob([JSON.stringify(result)], {type: "application/json"}));
 	    
 	    $.ajax({
