--- a/src/main/resources/templates/thymeleaf/fo/myPage/collection_reg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/collection_reg.html
@@ -183,7 +183,8 @@
 									<th><span class="my-red">보증서</span></th>
 									<td>
 										<div class="filebox bs3-primary">
-											<img class="content" id="workGrtUrl1" style="cursor:pointer"/>
+											<!-- <img class="content" id="workGrtUrl1" style="cursor:pointer"/> -->
+											<input type="text" id="workGrtUrl1" class="input-4" disabled>
 											<label for="workGrtUrl">찾아보기</label> 
 											<input type="file" id="workGrtUrl" class="upload-hidden" accept=".jpeg, .jpg, .png, .pdf"> 
 										</div>
@@ -201,16 +202,15 @@
 									<th><span class="my-red">사이즈</span></th>
 									<td>
 										<div class="coll-gr">
-											<input type="text" class="input-4" id="workSizeWidth"/>
+											<input type="number" class="input-4" id="workSizeWidth" onblur="autoLake()"/>
 											<span class="cg-x">X</span> 
-											<input type="text" class="input-4" id="workSizeDepth"/>
-											<!-- <span class="cg-text">cm 37호 입니다</span> -->
+											<input type="number" class="input-4" id="workSizeDepth" onblur="autoLake()"/>
+											<span class="cg-text" id="workLake">
+												<br/>작품 사이즈를 입력하시면 호수가 자동으로 계산됩니다. 
+											</span>
+											<img src="/resources/img/ba/me-icon.png" style="cursor:pointer;" onclick="openLakeHelp()"></img>
 										</div>
 									</td>
-								</tr>
-								<tr>
-									<th><span class="my-red">호수</span></th>
-									<td><input type="text" class="input-4" id="workLake"/></td>
 								</tr>
 								<tr>
 									<th><span class="my-red">소재/기법</span></th>
@@ -384,138 +384,133 @@
 		</div>
 	</div>
 </div>
+<!-- 호수 안내표 -->
+<!-- table -->
+<div class="modal fade modal-s" id="lakeHelpModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-baeg max-w480" style="max-width:600px !important;">
+		<div class="modal-content">
+			<div class="modal-header" style="padding: 0;min-height: 0;height: 0;">
+				<div class="baegs">
+				    <div class="close" onclick="closeLakeHelp()"><img src="/resources/img/ba/icon-end.png" /></div>
+				</div>
+			</div>
+			<div class="modal-body login-body">
+
+				<div class="login-box" style="margin-top:30px;">
+					<p class="lb-p1">작품 사이즈 기준표 (cm)</p>
+					<div class="text-box1">
+						
+						<table class="tstyle4">
+							<tr>
+								<th>호수</th>
+								<th>F형 (인물)</th>
+							</tr>
+							<tr>
+								<td>0</td>
+								<td>18.0 x 14.0</td>
+							</tr>
+							<tr>
+								<td>1</td>
+								<td>22.7 x 15.8</td>
+							</tr>
+							<tr>
+								<td>2</td>
+								<td>25.8 x 17.9</td>
+							</tr>
+							<tr>
+								<td>3</td>
+								<td>27.3 x 22.0</td>
+							</tr>
+							<tr>
+								<td>4</td>
+								<td>33.4 x 24.2</td>
+							</tr>
+							<tr>
+								<td>5</td>
+								<td>34.8 x 27.3</td>
+							</tr>
+							<tr>
+								<td>6</td>
+								<td>40.9 x 31.8</td>
+							</tr>
+							<tr>
+								<td>8</td>
+								<td>45.5 x 37.9</td>
+							</tr>
+							<tr>
+								<td>10</td>
+								<td>53.0 x 45.0</td>
+							</tr>
+							<tr>
+								<td>12</td>
+								<td>60.6 x 50.0</td>
+							</tr>
+							<tr>
+								<td>15</td>
+								<td>65.1 x 53.0</td>
+							</tr>
+							<tr>
+								<td>20</td>
+								<td>72.7 x 60.6</td>
+							</tr>
+							<tr>
+								<td>25</td>
+								<td>80.3 x 65.1</td>
+							</tr>
+							<tr>
+								<td>30</td>
+								<td>90.9 x 72.7</td>
+							</tr>
+							<tr>
+								<td>40</td>
+								<td>100.0 x 80.3</td>
+							</tr>
+							<tr>
+								<td>50</td>
+								<td>116.8 x 91.0</td>
+							</tr>
+							<tr>
+								<td>60</td>
+								<td>130.3 x 97.0</td>
+							</tr>
+							<tr>
+								<td>80</td>
+								<td>145.5 x 112.1</td>
+							</tr>
+							<tr>
+								<td>100</td>
+								<td>162.2 x 130.3</td>
+							</tr>
+							<tr>
+								<td>120</td>
+								<td>193.9 x 130.3</td>
+							</tr>
+							<tr>
+								<td>150</td>
+								<td>227.3 x 181.8</td>
+							</tr>
+							<tr>
+								<td>200</td>
+								<td>259.1 x 193.9</td>
+							</tr>
+							<tr>
+								<td>300</td>
+								<td>290.9 x 218.2</td>
+							</tr>
+							<tr>
+								<td>500</td>
+								<td>333.3 x 248.5</td>
+							</tr>
+						</table>
+
+					</div>
+					
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 <script type="text/javascript">      
-
-
-
-
- $(window).on("resize", function () {
-    if(window.matchMedia('(min-width: 1537px)').matches)
-    {
-    	
-    	var swiper = new Swiper(".mySwiper2", {
-	          slidesPerView: 4,
-	          spaceBetween: 30,
-	          slidesPerGroup: 1,
-	          loop: true,
-	          loopFillGroupWithBlank: true,
-	       	  /* autoplay: {
-            delay: 3000,
-            disableOnInteraction: false,
-          }, */
-	          pagination: {
-	            el: ".swiper-pagination",
-	            clickable: true,
-	          },
-	          navigation: {
-	            nextEl: ".swiper-button-next",
-	            prevEl: ".swiper-button-prev",
-	          },
-	        });
-    	
-    	  
-    	  
-    	
-    	
-    }  else if(window.matchMedia('(min-width: 751px)').matches) {
-    	
-    	var swiper = new Swiper(".mySwiper2", {
-	          slidesPerView: 3,
-	          spaceBetween: 30,
-	          slidesPerGroup: 1,
-	          loop: true,
-	          loopFillGroupWithBlank: true,
-	       /* autoplay: {
-            delay: 3000,
-            disableOnInteraction: false,
-          }, */
-	          pagination: {
-	            el: ".swiper-pagination",
-	            clickable: true,
-	          },
-	          navigation: {
-	            nextEl: ".swiper-button-next",
-	            prevEl: ".swiper-button-prev",
-	          },
-	     });
-    	
-    	
-    	
-     } else {
-    	var swiper = new Swiper(".mySwiper2", {
-	          slidesPerView: 2,
-	       	  spaceBetween: 30,
-	          slidesPerGroup: 1,
-	          loop: true,
-	          loopFillGroupWithBlank: true,
-	       /* autoplay: {
-            delay: 3000,
-            disableOnInteraction: false,
-          }, */
-	          pagination: {
-	            el: ".swiper-pagination",
-	            clickable: true,
-	          },
-	          navigation: {
-	            nextEl: ".swiper-button-next",
-	            prevEl: ".swiper-button-prev",
-	          },
-	     });
-    	
-     };
-}).resize();
- 
- 
- 
- $(document).ready(function () {
-  $(".elm").hover(
-	function(){ $(this).addClass('hover') },
-    function(){ $(this).removeClass('hover') }
-  )
-  $(".cn-b").hover(
-	function(){ $(this).addClass('gis') },
-    function(){ $(this).removeClass('gis') }
-  )
- });
- 
- $(function() {                      
-  $(".bab-bo").click(function() { 
-    $(this).toggleClass("bashow");     
-  });
-  
-  $(".lg-my").click(function() { 
- 	    $('.bg-sh').toggleClass('bg-show');     
- 	 	 $('.s-hov').toggleClass('s-hov-show');     
- 	  });
-  
-});
- 
- 
- 
- 
- /* 메뉴바 FIXED */
- if (jQuery(window).width() > 0) {
-     jQuery(window).on("scroll",function(ev){
-         if(jQuery(window).scrollTop() > 80 ) { /* 해당 높이를 벗어나면 fixed 클래스 추가 */
-             jQuery('.head-wrap').addClass('fixed');
-         }
-         else{
-             jQuery('.head-wrap').removeClass('fixed');
-         }
-         return false;
-     });
- }
- 
- 
- /* jQuery(function($) {
-
-    window.onresize = function(){
-      document.location.reload();
-    };
-
-}); */
- 
- 
  
  var delay = 300;
  var timer = null;
@@ -552,6 +547,110 @@ $(document).on("change", ".upload-hidden", function(e){
 	readImg(e.target, e.target.id);
 });
 
+$("#workGrtUrl").change(function(){
+	$("#workGrtUrl1").val(this.value);
+});
+
+function autoLake(){
+	var width = $("#workSizeWidth").val();
+	var depth = $("#workSizeDepth").val();
+	var lake = "";
+	if(width != null && width != "" && depth != null && depth != ""){
+		if(width >= 18.0 && depth >= 14.0){
+			lake = 0;
+		}
+		if(width >= 22.7 && depth >= 15.8){
+			lake = 1;
+		}
+		if(width >= 25.8 && depth >= 17.9){
+			lake = 2;
+		}
+		if(width >= 27.3 && depth >= 22.0){
+			lake = 3;
+		}
+		if(width >= 33.4 && depth >= 24.2){
+			lake = 4;
+		}
+		if(width >= 34.8 && depth >= 27.3){
+			lake = 5;
+		}
+		if(width >= 40.9 && depth >= 31.8){
+			lake = 6;
+		}
+		if(width >= 45.5 && depth >= 37.9){
+			lake = 8;
+		}
+		if(width >= 53.0 && depth >= 45.0){
+			lake = 10;
+		}
+		if(width >= 60.6 && depth >= 50.0){
+			lake = 12;
+		}
+		if(width >= 65.1 && depth >= 53.0){
+			lake = 15;
+		}
+		if(width >= 72.7 && depth >= 60.6){
+			lake = 20;
+		}
+		if(width >= 80.3 && depth >= 65.1){
+			lake = 25;
+		}
+		if(width >= 90.9 && depth >= 72.7){
+			lake = 30;
+		}
+		if(width >= 100.0 && depth >= 80.3){
+			lake = 40;
+		}
+		if(width >= 116.8 && depth >= 91.0){
+			lake = 50;
+		}
+		if(width >= 100.0 && depth >= 80.3){
+			lake = 40;
+		}
+		if(width >= 116.8 && depth >= 91.0){
+			lake = 50;
+		}
+		if(width >= 130.3 && depth >= 97.0){
+			lake = 60;
+		}
+		if(width >= 145.5 && depth >= 112.1){
+			lake = 80;
+		}
+		if(width >= 162.2 && depth >= 130.3){
+			lake = 100;
+		}
+		if(width >= 193.9 && depth >= 130.3){
+			lake = 120;
+		}
+		if(width >= 227.3 && depth >= 181.8){
+			lake = 150;
+		}
+		if(width >= 259.1 && depth >= 193.9){
+			lake = 200;
+		}
+		if(width >= 290.9 && depth >= 218.2){
+			lake = 300;
+		}
+		if(width >= 333.3 && depth >= 248.5){
+			lake = 500;
+		}
+		$("#workLake").html("<br/>"+lake+"호 입니다.");
+		work.workLake = lake;
+		
+	}else{
+		$("#workLake").html("<br/>작품 사이즈를 입력하시면 호수가 자동으로 계산됩니다.");
+		work.workLake = "";
+	}
+}
+function openLakeHelp(){
+	$('body').css("overflow", "hidden");
+	$('#lakeHelpModal').modal({backdrop: 'static', keyboard: false})  
+	$("#lakeHelpModal").modal("show");
+}
+function closeLakeHelp(){
+	$('body').css("overflow", "scroll");
+	$("#lakeHelpModal").modal("hide");
+}
 function readImg(input, imgId){
     // 인풋 태그에 파일이 있는 경우
     if(input.files && input.files[0]) {
@@ -621,7 +720,7 @@ function collectionReg(){
 		work.workVideoUrl = $("#workVideoUrl").val();
 		work.workIntrdc = $("#workIntrdc").val();
 		work.keywrd = $("#keywrd").val();
-		work.workLake = $("#workLake").val();
+		//work.workLake = $("#workLake").val();
 		
 		const formData = new FormData();
 		//작품 사진 전면
@@ -653,8 +752,8 @@ function collectionReg(){
 		}
 		//보증서
 		const workGrtUrl = document.getElementById("workGrtUrl");
-		if(workGrtUrl.files[0] == null && $("#workGrtUrl1").attr("src") != null){
-			work.workGrtUrl = $("#workGrtUrl1").attr("src");
+		if(workGrtUrl.files[0] == null && $("#workGrtUrl1").val() != null){
+			work.workGrtUrl = $("#workGrtUrl1").val();
 		}else{
 			if(workGrtUrl.files[0] != null){
 				formData.append("workGrtUrl", workGrtUrl.files[0]);
@@ -888,11 +987,11 @@ function collectionStorage(){
 }
 //작품 구분 체크하면 체크한 값을 가져온다
 function workClsfcCdCheck(){
-	result.workClsfcCd = "";
+	work.workClsfcCd = "";
 	document.querySelectorAll('input[name=workClsfcCd]:checked').forEach((el) => {
 		work.workClsfcCd += el.value + ",";
 	});
-	work.workClsfcCd = result.workClsfcCd.slice(0, -1);
+	work.workClsfcCd = work.workClsfcCd.slice(0, -1);
 } 
 //키워드 입력시 공백제거하고 키워드 값을 가져온다
 function keywrdSet(obj){
@@ -1049,7 +1148,7 @@ function selectWork(obj){
 			$("#workMainImgUrl1").attr("src", result.workMainImgUrl);
 			$("#workImgFrtUrl1").attr("src", result.workImgFrtUrl);
 			$("#workImgRerUrl1").attr("src", result.workImgRerUrl);
-			$("#workGrtUrl1").attr("src", result.workGrtUrl);
+			$("#workGrtUrl1").val(result.workGrtUrl);
 			$("#workImgLefUrl1").attr("src", result.workImgLefUrl);
 			$("#workImgRitUrl1").attr("src", result.workImgRitUrl);
 			$("#workImgTopUrl1").attr("src", result.workImgTopUrl);
@@ -1061,6 +1160,132 @@ function selectWork(obj){
         }
 	}); 
 }
+
+$(window).on("resize", function () {
+    if(window.matchMedia('(min-width: 1537px)').matches)
+    {
+    	
+    	var swiper = new Swiper(".mySwiper2", {
+	          slidesPerView: 4,
+	          spaceBetween: 30,
+	          slidesPerGroup: 1,
+	          loop: true,
+	          loopFillGroupWithBlank: true,
+	       	  /* autoplay: {
+            delay: 3000,
+            disableOnInteraction: false,
+          }, */
+	          pagination: {
+	            el: ".swiper-pagination",
+	            clickable: true,
+	          },
+	          navigation: {
+	            nextEl: ".swiper-button-next",
+	            prevEl: ".swiper-button-prev",
+	          },
+	        });
+    	
+    	  
+    	  
+    	
+    	
+    }  else if(window.matchMedia('(min-width: 751px)').matches) {
+    	
+    	var swiper = new Swiper(".mySwiper2", {
+	          slidesPerView: 3,
+	          spaceBetween: 30,
+	          slidesPerGroup: 1,
+	          loop: true,
+	          loopFillGroupWithBlank: true,
+	       /* autoplay: {
+            delay: 3000,
+            disableOnInteraction: false,
+          }, */
+	          pagination: {
+	            el: ".swiper-pagination",
+	            clickable: true,
+	          },
+	          navigation: {
+	            nextEl: ".swiper-button-next",
+	            prevEl: ".swiper-button-prev",
+	          },
+	     });
+    	
+    	
+    	
+     } else {
+    	var swiper = new Swiper(".mySwiper2", {
+	          slidesPerView: 2,
+	       	  spaceBetween: 30,
+	          slidesPerGroup: 1,
+	          loop: true,
+	          loopFillGroupWithBlank: true,
+	       /* autoplay: {
+            delay: 3000,
+            disableOnInteraction: false,
+          }, */
+	          pagination: {
+	            el: ".swiper-pagination",
+	            clickable: true,
+	          },
+	          navigation: {
+	            nextEl: ".swiper-button-next",
+	            prevEl: ".swiper-button-prev",
+	          },
+	     });
+    	
+     };
+}).resize();
+ 
+ 
+ 
+ $(document).ready(function () {
+  $(".elm").hover(
+	function(){ $(this).addClass('hover') },
+    function(){ $(this).removeClass('hover') }
+  )
+  $(".cn-b").hover(
+	function(){ $(this).addClass('gis') },
+    function(){ $(this).removeClass('gis') }
+  )
+ });
+ 
+ $(function() {                      
+  $(".bab-bo").click(function() { 
+    $(this).toggleClass("bashow");     
+  });
+  
+  $(".lg-my").click(function() { 
+ 	    $('.bg-sh').toggleClass('bg-show');     
+ 	 	 $('.s-hov').toggleClass('s-hov-show');     
+ 	  });
+  
+});
+ 
+ 
+ 
+ 
+ /* 메뉴바 FIXED */
+ if (jQuery(window).width() > 0) {
+     jQuery(window).on("scroll",function(ev){
+         if(jQuery(window).scrollTop() > 80 ) { /* 해당 높이를 벗어나면 fixed 클래스 추가 */
+             jQuery('.head-wrap').addClass('fixed');
+         }
+         else{
+             jQuery('.head-wrap').removeClass('fixed');
+         }
+         return false;
+     });
+ }
+ 
+ 
+ /* jQuery(function($) {
+
+    window.onresize = function(){
+      document.location.reload();
+    };
+
+}); */
 
 </script>
     
