--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy.html
@@ -265,7 +265,7 @@
 												</tr>
 												<tr>
 													<th>입금할 금액</th>
-													<td th:text="${result.vacctInfo.paymntAmt}">000-000-0000</td>
+													<td th:text="|${result.vacctInfo.paymntAmt} KRW|">000-000-0000</td>
 												</tr>
 												<tr>
 													<th>입금만료 일시</th>
@@ -351,14 +351,18 @@
 													<td th:if="${#strings.equals(result.payMntInfo2.payMethod, '신용카드')} and ${not #strings.isEmpty(result.payMntInfo1.payType)}" th:text="|[${result.payMntInfo2.payType}] ${result.payMntInfo2.issueCompanyName}카드 카드번호 ${result.payMntInfo2.cardNo}|">신한은행 000-000-0000</td>
 													<td th:if="${result.payMntInfo2.payMethod.toString().equals('계좌이체')}" th:text="|${result.payMntInfo2.payMethod} ${result.payMntInfo2.bankName}|">신한은행 000-000-0000</td>
 													<td th:if="${result.payMntInfo2.payMethod.toString().equals('가상계좌')}" th:text="|${result.payMntInfo2.payMethod} ${result.payMntInfo2.bankName} ${result.payMntInfo2.accountNo}|">신한은행 000-000-0000</td>
+													<td th:if="${result.payMntInfo2.payMethod.toString().equals('결제완료')}" th:text="|결제 금액 0원이므로 자동 결제완료 처리|">신한은행 000-000-0000</td>
 												</tr>
 												<tr>
 													<th>결제 내역</th>
 													<td>
 														<div class="tbx-1">
 															<dl class="tbx-dl1">
-																<dt>배송료</dt>
-																<dd th:text="|${result.payMntInfo2.paymntAmt} KRW|">2,300,000 원</dd>
+																<th:block th:each="trnsprtInfo: ${result.trnsprtInfo}">
+																	<dt th:if="${trnsprtInfo.trnsprtTypCd} == 'P'" th:text="|${trnsprtInfo.trnsprtTypCdNm}(${trnsprtInfo.trnsprtAreaCdNm})<br/> ${trnsprtInfo.trnsprtServiceCdNm}|">부가서비스</dt>
+																	<dt th:if="${trnsprtInfo.trnsprtTypCd} == 'D'" th:text="|${trnsprtInfo.trnsprtTypCdNm}, ${trnsprtInfo.trnsprtServiceCdNm}|">부가서비스</dt>
+																	<dd th:text="|${trnsprtInfo.trnsprtPrc} KRW|">2,300,000 원</dd>
+																</th:block>
 																<dt>배송료 할인</dt>
 																<dd th:if="${not #strings.isEmpty(result.payMntInfo2.paymntDiscAmt)}" th:text="|${result.payMntInfo2.paymntDiscAmt} KRW|">2,300,000 원</dd>
 																<dd th:unless="${not #strings.isEmpty(result.payMntInfo2.paymntDiscAmt)}">0 KRW</dd>
@@ -471,7 +475,31 @@
 	</div>
 	</form>
 </div>
+<div class="modal fade modal-s" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModal4Label" aria-hidden="true">
+	<div class="modal-dialog modal-baeg max-w530">
+		<div class="modal-content">
+			<div class="modal-header" style="height: 0; min-height: 0; padding: 0;">
+				<div class="baegs">
+				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="resources/img/ba/icon-end.png" /></div>
+				</div>
 
+			</div>
+			<div class="modal-body">
+				<div class="md-box-1">
+					<div class="md-ds" style="color:#333;">
+						할인이 적용되어 결제하실 금액이 0원입니다.<br/>결제 완료 처리를 하시겠습니까?
+					</div>
+					
+					<div class="baeg-btn mg_t30">
+						<a href="#"><button type="button" class="baeg-b1" onclick="paymntCompleted()">확인</button></a>
+						<a href="#" data-dismiss="modal" aria-label="Close"><button type="button" class="baeg-b2">취소</button></a>
+					</div>
+					
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 <script th:inline="javascript">
 var result = /*[[${result}]]*/ 'default';
 var fee = 0; //거래 수수료
@@ -488,6 +516,9 @@ workGrtUrl.src = result.dealInfo.workGrtUrl; //보증서 주소
  * 화면 오픈시
  */
 jQuery(document).ready(function() {
+	
+	$(".selectpicker").selectpicker(); //셀렉트피커 활성화
+	
 	$("#conTitle").empty();
 	const conBtn = document.getElementById("conBtn");
 	conBtn.remove();
@@ -495,6 +526,7 @@ jQuery(document).ready(function() {
 	conTitleHtml += '<h3>거래 계약 상세</h3>';
 	$("#conTitle").append(conTitleHtml).trigger("create");
 	$("#myDeal").addClass("active");
+	$("#sbx_trnsprtAreaCd").selectpicker("hide"); //운송지역코드 숨기기
 	if(result.dealInfo.dealTypCd == "A" && result.dealInfo.dealSttsCd == "TP"){ //경매면서 판매중이면
 		if(result.dealInfo.bidMbrSq == sMbrSqVal){ //가장 높은 입찰자면
 			$("#dealSttsCdDetail").text("현재 가장 높은 입찰가로 입찰 중 입니다.");
@@ -504,8 +536,7 @@ jQuery(document).ready(function() {
 			$("#dealSttsCdDetail").append("<span>경매 진행 중</span>"); 
 		}
 	}
-	$(".selectpicker").selectpicker(); //셀렉트피커 활성화
-	$("#sbx_trnsprtAreaCd").selectpicker("hide"); //운송지역코드 숨기기
+	
 	if(result.dealInfo.buyPaymntSttsCd == "1PW" && result.dealInfo.dealSttsCd == "TP"){ //정찰가 1차 결제/구매하기
 		$("#dealSttsCdDetail").text("구매자 1차 결제를 대기중입니다.");
 		$("#dealSttsCdDetail").append("<span>1차 결제 대기</span>"); 
@@ -569,7 +600,7 @@ jQuery(document).ready(function() {
 		$("#dealSttsCdDetail").append("<span>구매확정</span>"); 
 		$("#2PC").css("display", ""); //2차 결제 완료 div
 	}
-	if(result.dealInfo.buyPaymntSttsCd == "2PC" && result.dealInfo.dealSttsCd == "ST"){ //2차 결제 완료고 거래중지면
+	if(result.dealInfo.dealSttsCd == "ST"){ //2차 결제 완료고 거래중지면
 		$("#dealSttsCdDetail").text("거래 중지 상태입니다.");
 		$("#dealSttsCdDetail").append("<span>거래중지</span>"); 
 	}
@@ -592,17 +623,16 @@ function feeCal(){
 	var today = new Date().getTime();
 	var element = document.getElementById("dealCount");
 	//거래 남은 시간이 현재 시간보다 작으면
-	if(dday <= today){
+	if(dday <= today || result.dealInfo.dealSttsCd != "TP"){
 		stopDealCount();
+	}else{
+		var gap = dday - today;
+	  	var day = Math.ceil(gap / (1000 * 60 * 60 * 24));
+	  	var hour = Math.ceil((gap % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+	  	var min = Math.ceil((gap % (1000 * 60 * 60)) / (1000 * 60));
+	  	var sec = Math.ceil((gap % (1000 * 60)) / 1000);
+	  	element.innerHTML = day + " 일 " + hour + " : " + min + " : " + sec;
 	}
-	var gap = dday - today;
-  	var day = Math.ceil(gap / (1000 * 60 * 60 * 24));
-  	var hour = Math.ceil((gap % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-  	var min = Math.ceil((gap % (1000 * 60 * 60)) / (1000 * 60));
-  	var sec = Math.ceil((gap % (1000 * 60)) / 1000);
-  	element.innerHTML = day + " 일 " + hour + " : " + min + " : " + sec;
-  	console.log(dday);
-  	console.log(today);
 }, 1000);
 
 function stopDealCount(){
@@ -777,38 +807,96 @@ function btn_paymethod_onclick(obj){
 		}); 
 	}
 	if(result.dealInfo.buyPaymntSttsCd == "2PW"){ //2차 결제
-		if(totalAmount == "0"){
-			modalAlertShow("부가서비스가 선택되지 않았습니다.", "sbx_trnsprtTypCd");
-			return false;
-		}
 		data.paymntTypCd = "2"; //거래 차수
 		data.mbrRefNo = result.dealInfo.mbrRefNo + "-2"; //거래 순번
-		$.ajax({
-			type: "POST",
-			contentType: 'application/json',
-	        url: "/payment/readyApi",
-	        dataType: 'json',
-	        data: JSON.stringify(data),
-	        async: false,
-			success:function(response){
-				console.log(response);
-				if (response.resultCode == '200') {
-					/* 결제창 호출 */
-					if(!isMobile){
-						Mainpay.open(response.data.nextPcUrl);
-					}else{
-						//location.href = response.data.nextPcUrl.replace("pc", "mobile");
-						window.open(response.data.nextMobileUrl);
-					}
+		var index = $("#sbx_couponList_TD option").index($("#sbx_couponList_TD option:selected")) - 1; //선택된 2차 쿠폰 index를 가져온다
+		data.cuponSq = sbx_couponSqList[index]; //1차 결제 쿠폰 순번을 가져온다
+		if($("#sbx_trnsprtTypCd").val() == "" || $("#sbx_trnsprtTypCd").val() == null){
+			modalAlertShow("부가서비스가 선택되지 않았습니다.", "sbx_trnsprtTypCd");
+			return false;
+		}else{
+			if($("#sbx_trnsprtTypCd").val() == "P"){
+				if($("#sbx_trnsprtServiceCd").val() == "" || $("#sbx_trnsprtServiceCd").val() == null){
+					modalAlertShow("부가서비스가 선택되지 않았습니다.", "sbx_trnsprtTypCd");
 					return false;
 				}
-			},
-			error: function(error) {
-	            alert("오류 발생" + error);
-	        }
-		}); 
-		
+			}
+			if(totalAmount == 0){
+				$("#myModal4").modal("show");
+			}else{
+				$.ajax({
+					type: "POST",
+					contentType: 'application/json',
+			        url: "/payment/readyApi",
+			        dataType: 'json',
+			        data: JSON.stringify(data),
+			        async: false,
+					success:function(response){
+						console.log(response);
+						if (response.resultCode == '200') {
+							/* 결제창 호출 */
+							if(!isMobile){
+								Mainpay.open(response.data.nextPcUrl);
+							}else{
+								//location.href = response.data.nextPcUrl.replace("pc", "mobile");
+								window.open(response.data.nextMobileUrl);
+							}
+							return false;
+						}
+					},
+					error: function(error) {
+			            alert("오류 발생" + error);
+			        }
+				}); 
+			}
+		}
 	}
+}
+/*
+ * 결제 금액이 0원인 경우 바로 결제완료 처리가 된다. 
+ */
+function paymntCompleted(){
+	$("#myModal4").modal("hide");
+	var data = {
+			/*메인 페이에 보낼 파라미터*/
+			mbrRefNo : "", //주문번호
+			amount : parseInt(totalAmount), //메인페이에서 결제할 금액
+			paymethod : "NONE", //지불수단
+			goodsName : result.dealInfo.workNm, //상품명
+			/*DB에 저장할 파라미터*/
+			dealSq : result.dealInfo.dealSq, //거래 순번
+			dealTypCd : result.dealInfo.dealTypCd, //거래 유형 코드
+			workSq : result.dealInfo.workSq, //작품 순번
+			artstSq : result.dealInfo.artstSq, //아티스트 순번
+			buyMbrSq : result.mbrInfo.buyMbrSq, //결제 회원 순번
+			sellMbrSq : result.dealInfo.sellMbrSq, //판매 회원 순번
+			paymntAmt : parseInt(totalAmount), //총 결제 금액
+			paymntFeeAmt : parseInt(fee+feeTax), //결제 수수료
+			paymntDiscAmt : parseInt(disc), //할인할 금액
+			paymntTypCd : "", //결제 유형 코드 (1 1차결제/2 2차결제)
+			paymntDivCd : "B" //결제 구분 코드 (B 구매자/S 판매자)
+			};
+	data.paymntTypCd = "2"; //거래 차수
+	data.mbrRefNo = result.dealInfo.mbrRefNo + "-2"; //거래 순번
+	var index = $("#sbx_couponList_TD option").index($("#sbx_couponList_TD option:selected")) - 1; //선택된 2차 쿠폰 index를 가져온다
+	data.cuponSq = sbx_couponSqList[index]; //1차 결제 쿠폰 순번을 가져온다
+	$.ajax({
+		type: "POST",
+		contentType: 'application/json',
+        url: "/payment/paymentCompleted",
+        dataType: 'json',
+        data: JSON.stringify(data),
+        async: false,
+		success:function(data){
+			if (data.result == 'OK') {
+				modalAlertShow("결제 완료 처리되었습니다.");
+				call("200");
+			}
+		},
+		error: function(error) {
+            alert("오류 발생" + error);
+        }
+	}); 
 }
 /*
  * 결제 완료/실패 시 리로드 된다
@@ -903,7 +991,7 @@ $("#sbx_trnsprtTypCd").on("change", function(){
 				type: "POST",
 		        url: "/selectTrnsprtInfo",
 		        data: {
-		        	trnsprtDivCd : "B", //판매자
+		        	trnsprtDivCd : "B", //구매자
 		    		trnsprtTypCd : document.getElementById("sbx_trnsprtTypCd").value, //운송 구분 코드
 		    		trnsprtReqYn : "Y" //부가서비스 필수 여부
 		        },
@@ -955,6 +1043,17 @@ $("#sbx_trnsprtAreaCd").on("change", function(){
 					opt.value = data.result[i].value;
 					opt.text = data.result[i].text;
 					target.appendChild(opt); //서비스 선택 셀렉트박스 옵션 추가
+				}
+				for(var i=0; i<target.options.length; i++){
+					if(result.dealInfo.workLake < 80){
+						if(target.options[i].text.indexOf("80호 이상") > -1){
+							target.options[i].disabled = true;
+						}
+					}else{
+						if(target.options[i].text.indexOf("80호 미만") > -1){
+							target.options[i].disabled = true;
+						}
+					}
 				}
 			},
 			error: function(error) {
@@ -1077,7 +1176,7 @@ $("#sbx_couponList_DD").on("change", function(){
 		}else{
 			innerText += '	<div id="div_couponVal_DD" class="cmy-coupon">'+$("#sbx_couponList_DD option:selected").val()+'%</div>';
 		}
-		innerText += '	<div class="cmy-end">X</div>';
+		//innerText += '	<div class="cmy-end">X</div>';
 		innerText += '</div>';
 		$("#div_couponList_DD").empty();
 		$("#div_couponList_DD").append(innerText).trigger("create"); //쿠폰 추가
@@ -1099,7 +1198,7 @@ $("#sbx_couponList_TD").on("change", function(){
 		}else{
 			innerText += '	<div id="div_couponVal_TD" class="cmy-coupon">'+$("#sbx_couponList_TD option:selected").val()+'%</div>';
 		}
-		innerText += '	<div class="cmy-end">X</div>';
+		//innerText += '	<div class="cmy-end">X</div>';
 		innerText += '</div>';
 		$("#div_couponList_TD").empty();
 		$("#div_couponList_TD").append(innerText).trigger("create"); //쿠폰 추가
@@ -1134,6 +1233,9 @@ function totalTrnsprtPrc(){
 				disc = disc.replaceAll(' KRW', '') //쿠폰 할인 금액을 가져온다
 				disc = parseInt(disc); //쿠폰 할인 금액을 가져온다
 				totalAmount -= disc; //부가서비스에서 할인 금액을 뺀다
+			}
+			if(totalAmount <= 0){
+				totalAmount = 0;
 			}
 		}
 		$("#div_totalAmount_2").empty(); //2차 최종 결제 금액 표시 영역을 초기화 시킨다.
