--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -220,7 +220,7 @@
 												</tr>
 												<tr>
 													<th>입금할 금액</th>
-													<td th:text="${result.vacctInfo.paymntWorkAmt}">000-000-0000</td>
+													<td th:text="|${result.vacctInfo.paymntAmt} KRW|">000-000-0000</td>
 												</tr>
 												<tr>
 													<th>입금만료 일시</th>
@@ -259,9 +259,11 @@
 													<td>
 														<div class="tbx-1">
 															<dl class="tbx-dl1">
-																<dt>배송료</dt>
-																<dd th:text="|${result.payMntInfo.paymntAmt} KRW|">2,300,000 원</dd>
-																<dt>배송료 할인</dt>
+																<th:block th:each="trnsprtInfo: ${result.trnsprtInfo}">
+																	<dt th:if="${trnsprtInfo.trnsprtTypCd} == 'P'" th:text="|${trnsprtInfo.trnsprtTypCdNm}(${trnsprtInfo.trnsprtAreaCdNm})<br/> ${trnsprtInfo.trnsprtServiceCdNm}|">부가서비스</dt>
+																	<dt th:if="${trnsprtInfo.trnsprtTypCd} == 'D'" th:text="|${trnsprtInfo.trnsprtTypCdNm}, ${trnsprtInfo.trnsprtServiceCdNm}|">부가서비스</dt>
+																	<dd th:text="|${trnsprtInfo.trnsprtPrc} KRW|">2,300,000 원</dd>
+																</th:block>
 																<dd th:if="${not #strings.isEmpty(result.payMntInfo.paymntDiscAmt)}" th:text="|${result.payMntInfo.paymntDiscAmt} KRW|">2,300,000 원</dd>
 																<dd th:unless="${not #strings.isEmpty(result.payMntInfo.paymntDiscAmt)}">0 KRW</dd>
 															</dl>
@@ -353,7 +355,7 @@
 									
 										<div class="mbox-1">
 											<div class="pay-link">
-												<!-- <a href="javascript:void(0);" class="pay-1" value="CARD" onclick="btn_paymethod_onclick(this)"><img src="resources/img/mypage/icon-2.png" /><span>신용카드</span></a> -->
+												<a href="javascript:void(0);" class="pay-1" value="CARD" onclick="btn_paymethod_onclick(this)"><img src="resources/img/mypage/icon-2.png" /><span>신용카드</span></a>
 												<!-- <a href="#" class="pay-2" value="CARD" onclick="btn_paymethod_onclick(this)"><img src="resources/img/mypage/icon-3.png" /><span>무통장입금</span></a> -->
 												<!-- <a href="javascript:void(0);" class="pay-3" value="ACCT" onclick="btn_paymethod_onclick(this)"><img src="resources/img/mypage/icon-6.png" /><span>실시간계좌이체</span></a> -->
 												<a href="javascript:void(0);" class="pay-4" value="VACCT" onclick="btn_paymethod_onclick(this)"><img src="resources/img/mypage/icon-4.png" /><span>가상계좌</span></a>
@@ -422,6 +424,31 @@
 	</div>
 	</form>
 </div>
+<div class="modal fade modal-s" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModal4Label" aria-hidden="true">
+	<div class="modal-dialog modal-baeg max-w530">
+		<div class="modal-content">
+			<div class="modal-header" style="height: 0; min-height: 0; padding: 0;">
+				<div class="baegs">
+				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="resources/img/ba/icon-end.png" /></div>
+				</div>
+
+			</div>
+			<div class="modal-body">
+				<div class="md-box-1">
+					<div class="md-ds" style="color:#333;">
+						할인이 적용되어 결제하실 금액이 0원입니다.<br/>결제 완료 처리를 하시겠습니까?
+					</div>
+					
+					<div class="baeg-btn mg_t30">
+						<a href="#"><button type="button" class="baeg-b1" onclick="paymntCompleted()">확인</button></a>
+						<a href="#" data-dismiss="modal" aria-label="Close"><button type="button" class="baeg-b2">취소</button></a>
+					</div>
+					
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 <script th:inline="javascript">
 var result = /*[[${result}]]*/ 'default';
 var amount = 0; //할인 전 금액
@@ -435,6 +462,9 @@ workGrtUrl.src = result.dealInfo.workGrtUrl; //보증서 주소
  * 화면 오픈시
  */
 jQuery(document).ready(function() {
+	
+	$(".selectpicker").selectpicker(); //셀렉트피커 활성화
+	
 	$("#conTitle").empty();
 	const conBtn = document.getElementById("conBtn");
 	conBtn.remove();
@@ -487,7 +517,7 @@ jQuery(document).ready(function() {
 		$("#dealSttsCdDetail").append("<span>구매확정</span>"); 
 		$("#2PC").css("display", ""); //정산 화면
 	}
-	if(result.dealInfo.sellPaymntSttsCd == "2PC" && result.dealInfo.dealSttsCd == "ST"){ //판매자 거래중지면
+	if(result.dealInfo.dealSttsCd == "ST"){ //판매자 거래중지면
 		$("#dealSttsCdDetail").text("거래 중지 상태입니다.");
 		$("#dealSttsCdDetail").append("<span>거래중지</span>"); 
 	}
@@ -501,17 +531,16 @@ var dealCount = setInterval(function(){
 	var today = new Date().getTime();
 	var element = document.getElementById("dealCount");
 	//거래 남은 시간이 현재 시간보다 작으면
-	if(dday <= today){
+	if(dday <= today || result.dealInfo.dealSttsCd != "TP"){
 		stopDealCount();
+	}else{
+		var gap = dday - today;
+	  	var day = Math.ceil(gap / (1000 * 60 * 60 * 24));
+	  	var hour = Math.ceil((gap % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+	  	var min = Math.ceil((gap % (1000 * 60 * 60)) / (1000 * 60));
+	  	var sec = Math.ceil((gap % (1000 * 60)) / 1000);
+	  	element.innerHTML = day + " 일 " + hour + " : " + min + " : " + sec;
 	}
-	var gap = dday - today;
-  	var day = Math.ceil(gap / (1000 * 60 * 60 * 24));
-  	var hour = Math.ceil((gap % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-  	var min = Math.ceil((gap % (1000 * 60 * 60)) / (1000 * 60));
-  	var sec = Math.ceil((gap % (1000 * 60)) / 1000);
-  	element.innerHTML = day + " 일 " + hour + " : " + min + " : " + sec;
-  	console.log(dday);
-  	console.log(today);
 }, 1000);
 
 function stopDealCount(){
@@ -634,41 +663,97 @@ function btn_payment(){
 		}); 
 	}
 	if(result.dealInfo.sellPaymntSttsCd == "2PW"){
-		if(totalAmount == "0"){
+		if($("#sbx_trnsprtTypCd").val() == "" || $("#sbx_trnsprtTypCd").val() == null){
 			modalAlertShow("부가서비스가 선택되지 않았습니다.", "sbx_trnsprtTypCd");
 			return false;
-		}
-		data.paymntTypCd = "2"; //거래 차수
-		data.mbrRefNo = result.dealInfo.mbrRefNo + "-3"; //주문 번호
-		var index = $("#sbx_couponList option").index($("#sbx_couponList option:selected")) - 1; //선택된 쿠폰 index를 가져온다
-		data.cuponSq = sbx_couponSqList[index]; //쿠폰 순번을 가져온다
-		$.ajax({
-			type: "POST",
-			contentType: 'application/json',
-	        url: "/payment/readyApi",
-	        dataType: 'json',
-	        data: JSON.stringify(data),
-	        async: false,
-			success:function(response){
-				console.log(response);
-				if (response.resultCode == '200') {
-					/* 결제창 호출 */
-					if(!isMobile){
-						Mainpay.open(response.data.nextPcUrl);
-					}else{
-						//location.href = response.data.nextPcUrl.replace("pc", "mobile");
-						window.open(response.data.nextMobileUrl);
-					}
+		}else{
+			if($("#sbx_trnsprtTypCd").val() == "P"){
+				if($("#sbx_trnsprtServiceCd").val() == "" || $("#sbx_trnsprtServiceCd").val() == null){
+					modalAlertShow("부가서비스가 선택되지 않았습니다.", "sbx_trnsprtTypCd");
 					return false;
 				}
-			},
-			error: function(error) {
-	            alert("오류 발생" + error);
-	        }
-		}); 
+			}
+			if(totalAmount == 0){
+				$("#myModal4").modal("show");
+			}else{
+				data.paymntTypCd = "2"; //거래 차수
+				data.mbrRefNo = result.dealInfo.mbrRefNo + "-3"; //주문 번호
+				var index = $("#sbx_couponList option").index($("#sbx_couponList option:selected")) - 1; //선택된 쿠폰 index를 가져온다
+				data.cuponSq = sbx_couponSqList[index]; //쿠폰 순번을 가져온다
+				$.ajax({
+					type: "POST",
+					contentType: 'application/json',
+			        url: "/payment/readyApi",
+			        dataType: 'json',
+			        data: JSON.stringify(data),
+			        async: false,
+					success:function(response){
+						console.log(response);
+						if (response.resultCode == '200') {
+							/* 결제창 호출 */
+							if(!isMobile){
+								Mainpay.open(response.data.nextPcUrl);
+							}else{
+								//location.href = response.data.nextPcUrl.replace("pc", "mobile");
+								window.open(response.data.nextMobileUrl);
+							}
+							return false;
+						}
+					},
+					error: function(error) {
+			            alert("오류 발생" + error);
+			        }
+				}); 
+			}
+		}
 	}
 }
-
+/*
+ * 결제 금액이 0원인 경우 바로 결제완료 처리가 된다. 
+ */
+function paymntCompleted(){
+	$("#myModal4").modal("hide");
+	var data = {
+			/*메인 페이에 보낼 파라미터*/
+			mbrRefNo : "", //주문번호
+			amount : parseInt(totalAmount), //메인페이에서 결제할 금액
+			paymethod : result.dealInfo.paymethod, //지불수단
+			goodsName : result.dealInfo.workNm, //상품명
+			/*DB에 저장할 파라미터*/
+			dealSq : result.dealInfo.dealSq, //거래 순번
+			dealTypCd : result.dealInfo.dealTypCd, //거래 유형 코드
+			workSq : result.dealInfo.workSq, //작품 순번
+			artstSq : result.dealInfo.artstSq, //아티스트 순번
+			buyMbrSq : result.mbrInfo.buyMbrSq, //결제 회원 순번
+			sellMbrSq : result.dealInfo.sellMbrSq, //판매 회원 순번
+			paymntAmt : parseInt(totalAmount), //총 결제 금액
+			paymntFeeAmt : parseInt(fee+feeTax), //결제 수수료
+			paymntDiscAmt : parseInt(disc), //할인할 금액
+			paymntTypCd : "", //결제 유형 코드 (1 1차결제/2 2차결제)
+			paymntDivCd : "S" //결제 구분 코드 (B 구매자/S 판매자)
+			};
+	data.paymntTypCd = "2"; //거래 차수
+	data.mbrRefNo = result.dealInfo.mbrRefNo + "-3"; //거래 순번
+	var index = $("#sbx_couponList option").index($("#sbx_couponList option:selected")) - 1; //선택된 2차 쿠폰 index를 가져온다
+	data.cuponSq = sbx_couponSqList[index]; //1차 결제 쿠폰 순번을 가져온다
+	$.ajax({
+		type: "POST",
+		contentType: 'application/json',
+        url: "/payment/paymentCompleted",
+        dataType: 'json',
+        data: JSON.stringify(data),
+        async: false,
+		success:function(response){
+			if (data.result == 'OK') {
+				modalAlertShow("결제 완료 처리되었습니다.");
+				call("200");
+			}
+		},
+		error: function(error) {
+            alert("오류 발생" + error);
+        }
+	}); 
+}
 /*
  * 결제 완료/실패 시 리로드 된다
  */
