--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWork_mod.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWork_mod.html
@@ -69,16 +69,17 @@
 									<th><span class="my-red">사이즈</span></th>
 									<td>
 										<div class="coll-gr">
-											<input type="text" class="input-4" id="workSizeWidth" th:value="${result.workSizeWidth}"/>
+											<input type="text" class="input-4" id="workSizeWidth" th:value="${result.workSizeWidth}" onblur="autoLake()"/>
 											<span class="cg-x">X</span> 
-											<input type="text" class="input-4" id="workSizeDepth" th:value="${result.workSizeDepth}"/>
-											<!-- <span class="cg-text">cm 37호 입니다</span> -->
+											<input type="text" class="input-4" id="workSizeDepth" th:value="${result.workSizeDepth}" onblur="autoLake()"/>
+											<span class="cg-text" id="workLake" th:if="${not #strings.isEmpty(result.workLake)}" th:utext="|<br/>${result.workLake}호 입니다.|">
+											</span>
+											<span class="cg-text" id="workLake" th:unless="${not #strings.isEmpty(result.workLake)}">
+												<br/>작품 사이즈를 입력하시면 호수가 자동으로 계산됩니다. 
+											</span>
+											<img src="/resources/img/ba/me-icon.png" style="cursor:pointer;" onclick="openLakeHelp()"></img>
 										</div>
 									</td>
-								</tr>
-								<tr>
-									<th><span class="my-red">호수</span></th>
-									<td><input type="text" class="input-4" id="workLake" th:value="${result.workLake}"/></td>
 								</tr>
 								<tr>
 									<th><span class="my-red">소재/기법</span></th>
@@ -213,8 +214,10 @@
 									<td>
 										<div class="filebox bs3-primary">
 											<!-- <input class="upload-name" value="파일선택" disabled> -->
-											<img class="content" id="workGrtUrl1" style="cursor:pointer" th:if="${not #strings.isEmpty(result.workGrtUrl)}" th:src="${result.workGrtUrl}"/>
-											<img class="content" id="workGrtUrl1" style="cursor:pointer" th:unless="${not #strings.isEmpty(result.workGrtUrl)}"/>
+											<!-- <img class="content" id="workGrtUrl1" style="cursor:pointer" th:if="${not #strings.isEmpty(result.workGrtUrl)}" th:src="${result.workGrtUrl}"/>
+											<img class="content" id="workGrtUrl1" style="cursor:pointer" th:unless="${not #strings.isEmpty(result.workGrtUrl)}"/> -->
+											<input type="text" id="workGrtUrl1" class="input-4" th:if="${not #strings.isEmpty(result.workGrtUrl)}" th:value="${result.workGrtUrl}" disabled>
+											<input type="text" id="workGrtUrl1" class="input-4" th:unless="${not #strings.isEmpty(result.workGrtUrl)}" disabled>
 											<label for="workGrtUrl">찾아보기</label> 
 											<input type="file" id="workGrtUrl" class="upload-hidden" accept=".jpeg, .jpg, .png, .pdf" th:value="${result.workGrtUrl}"> 
 										</div>
@@ -328,7 +331,132 @@
 		</div>
 		<th:block th:replace="thymeleaf/footer :: footerFragment"></th:block>
 	</div>
+<!-- 호수 안내표 -->
+<!-- table -->
+<div class="modal fade modal-s" id="lakeHelpModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
+	<div class="modal-dialog modal-baeg max-w480" style="max-width:600px !important;">
+		<div class="modal-content">
+			<div class="modal-header" style="padding: 0;min-height: 0;height: 0;">
+				<div class="baegs">
+				    <div class="close" onclick="closeLakeHelp()"><img src="/resources/img/ba/icon-end.png" /></div>
+				</div>
+			</div>
+			<div class="modal-body login-body">
 
+				<div class="login-box" style="margin-top:30px;">
+					<p class="lb-p1">작품 사이즈 기준표 (cm)</p>
+					<div class="text-box1">
+						
+						<table class="tstyle4">
+							<tr>
+								<th>호수</th>
+								<th>F형 (인물)</th>
+							</tr>
+							<tr>
+								<td>0</td>
+								<td>18.0 x 14.0</td>
+							</tr>
+							<tr>
+								<td>1</td>
+								<td>22.7 x 15.8</td>
+							</tr>
+							<tr>
+								<td>2</td>
+								<td>25.8 x 17.9</td>
+							</tr>
+							<tr>
+								<td>3</td>
+								<td>27.3 x 22.0</td>
+							</tr>
+							<tr>
+								<td>4</td>
+								<td>33.4 x 24.2</td>
+							</tr>
+							<tr>
+								<td>5</td>
+								<td>34.8 x 27.3</td>
+							</tr>
+							<tr>
+								<td>6</td>
+								<td>40.9 x 31.8</td>
+							</tr>
+							<tr>
+								<td>8</td>
+								<td>45.5 x 37.9</td>
+							</tr>
+							<tr>
+								<td>10</td>
+								<td>53.0 x 45.0</td>
+							</tr>
+							<tr>
+								<td>12</td>
+								<td>60.6 x 50.0</td>
+							</tr>
+							<tr>
+								<td>15</td>
+								<td>65.1 x 53.0</td>
+							</tr>
+							<tr>
+								<td>20</td>
+								<td>72.7 x 60.6</td>
+							</tr>
+							<tr>
+								<td>25</td>
+								<td>80.3 x 65.1</td>
+							</tr>
+							<tr>
+								<td>30</td>
+								<td>90.9 x 72.7</td>
+							</tr>
+							<tr>
+								<td>40</td>
+								<td>100.0 x 80.3</td>
+							</tr>
+							<tr>
+								<td>50</td>
+								<td>116.8 x 91.0</td>
+							</tr>
+							<tr>
+								<td>60</td>
+								<td>130.3 x 97.0</td>
+							</tr>
+							<tr>
+								<td>80</td>
+								<td>145.5 x 112.1</td>
+							</tr>
+							<tr>
+								<td>100</td>
+								<td>162.2 x 130.3</td>
+							</tr>
+							<tr>
+								<td>120</td>
+								<td>193.9 x 130.3</td>
+							</tr>
+							<tr>
+								<td>150</td>
+								<td>227.3 x 181.8</td>
+							</tr>
+							<tr>
+								<td>200</td>
+								<td>259.1 x 193.9</td>
+							</tr>
+							<tr>
+								<td>300</td>
+								<td>290.9 x 218.2</td>
+							</tr>
+							<tr>
+								<td>500</td>
+								<td>333.3 x 248.5</td>
+							</tr>
+						</table>
+
+					</div>
+					
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 
 
 <script th:inline="javascript">    
@@ -339,6 +467,10 @@ $(function() {
 }); 
 var result = /*[[${result}]]*/ 'default';
 var storage = new Object();
+
+$("#workGrtUrl").change(function(){
+	$("#workGrtUrl1").val(this.value);
+});
 
 $(function() {   
 	if(sessionStorage.getItem("work") != null){
@@ -388,7 +520,7 @@ $(function() {
 			keywrdSet(keywrd);
 		}
 	}
-	
+	autoLake();
 });
 
 function myWorkStorage(){
@@ -414,6 +546,109 @@ function myWorkStorage(){
 				modalAlertShow("임시 저장 되었습니다.", "reload");
 			}
 	});
+}
+//호수 계산
+function autoLake(){
+	var width = $("#workSizeWidth").val();
+	var depth = $("#workSizeDepth").val();
+	var lake = "";
+	if(width != null && width != "" && depth != null && depth != ""){
+		if(width >= 18.0 && depth >= 14.0){
+			lake = 0;
+		}
+		if(width >= 22.7 && depth >= 15.8){
+			lake = 1;
+		}
+		if(width >= 25.8 && depth >= 17.9){
+			lake = 2;
+		}
+		if(width >= 27.3 && depth >= 22.0){
+			lake = 3;
+		}
+		if(width >= 33.4 && depth >= 24.2){
+			lake = 4;
+		}
+		if(width >= 34.8 && depth >= 27.3){
+			lake = 5;
+		}
+		if(width >= 40.9 && depth >= 31.8){
+			lake = 6;
+		}
+		if(width >= 45.5 && depth >= 37.9){
+			lake = 8;
+		}
+		if(width >= 53.0 && depth >= 45.0){
+			lake = 10;
+		}
+		if(width >= 60.6 && depth >= 50.0){
+			lake = 12;
+		}
+		if(width >= 65.1 && depth >= 53.0){
+			lake = 15;
+		}
+		if(width >= 72.7 && depth >= 60.6){
+			lake = 20;
+		}
+		if(width >= 80.3 && depth >= 65.1){
+			lake = 25;
+		}
+		if(width >= 90.9 && depth >= 72.7){
+			lake = 30;
+		}
+		if(width >= 100.0 && depth >= 80.3){
+			lake = 40;
+		}
+		if(width >= 116.8 && depth >= 91.0){
+			lake = 50;
+		}
+		if(width >= 100.0 && depth >= 80.3){
+			lake = 40;
+		}
+		if(width >= 116.8 && depth >= 91.0){
+			lake = 50;
+		}
+		if(width >= 130.3 && depth >= 97.0){
+			lake = 60;
+		}
+		if(width >= 145.5 && depth >= 112.1){
+			lake = 80;
+		}
+		if(width >= 162.2 && depth >= 130.3){
+			lake = 100;
+		}
+		if(width >= 193.9 && depth >= 130.3){
+			lake = 120;
+		}
+		if(width >= 227.3 && depth >= 181.8){
+			lake = 150;
+		}
+		if(width >= 259.1 && depth >= 193.9){
+			lake = 200;
+		}
+		if(width >= 290.9 && depth >= 218.2){
+			lake = 300;
+		}
+		if(width >= 333.3 && depth >= 248.5){
+			lake = 500;
+		}
+		$("#workLake").html("<br/>"+lake+"호 입니다.");
+		result.workLake = lake;
+		
+	}else{
+		$("#workLake").html("<br/>작품 사이즈를 입력하시면 호수가 자동으로 계산됩니다.");
+		result.workLake = "";
+	}
+}
+//호수 안내 팝업 오픈
+function openLakeHelp(){
+	$('body').css("overflow", "hidden");
+	$('#lakeHelpModal').modal({backdrop: 'static', keyboard: false})  
+	$("#lakeHelpModal").modal("show");
+}
+//호수 안내 팝업 닫기
+function closeLakeHelp(){
+	$('body').css("overflow", "scroll");
+	$("#lakeHelpModal").modal("hide");
 }
 //작품 구분 체크하면 체크한 값을 가져온다
 function workClsfcCdCheck(){
@@ -459,7 +694,7 @@ function myWorkReg(){
 		result.workPrc = $("#workPrc").val().replaceAll(/,/g, '');
 		result.workVideoUrl = $("#workVideoUrl").val();
 		result.workIntrdc = $("#workIntrdc").val();
-		result.workLake = $("#workLake").val();
+		//result.workLake = $("#workLake").val();
 		
 		const formData = new FormData();
 		//작품 대표 사진
@@ -491,8 +726,8 @@ function myWorkReg(){
 		}
 		//보증서
 		const workGrtUrl = document.getElementById("workGrtUrl");
-		if(workGrtUrl.files[0] == null && $("#workGrtUrl1").attr("src") != null){
-			result.workGrtUrl = $("#workGrtUrl1").attr("src");
+		if(workGrtUrl.files[0] == null && $("#workGrtUrl1").val() != null){
+			result.workGrtUrl = $("#workGrtUrl1").val();
 		}else{
 			if(workGrtUrl.files[0] != null){
 				formData.append("workGrtUrl", workGrtUrl.files[0]);
@@ -578,12 +813,12 @@ function checkValid(){
 		return false;
 	}
 	
-	if($("#workLake").val() != null && $("#workLake").val() != ""){
+	/* if($("#workLake").val() != null && $("#workLake").val() != ""){
 		result.workLake = $("#workLake").val();
 	}else{
 		modalAlertShow("호수가 입력되지 않았습니다!", "workLake");
 		return false;
-	}
+	} */
 	
 	if($("#workMatrl").val() != null && $("#workMatrl").val() != ""){
 		result.workMatrl = $("#workMatrl").val();
@@ -599,19 +834,20 @@ function checkValid(){
 		return false;
 	}
 	
-	if(document.getElementById("workMainImgUrl1").src == null || document.getElementById("workMainImgUrl1").src == ""){
+	/* if(document.getElementById("workMainImgUrl1").src == null || document.getElementById("workMainImgUrl1").src == ""){
 		modalAlertShow("작품 대표 사진이 업로드되지 않았습니다!", "workMainImgUrl");
 		return false;
-	}
+	} */
+	
 	if(document.getElementById("workImgFrtUrl1").src == null || document.getElementById("workImgFrtUrl1").src == ""){
 		modalAlertShow("작품 전면 사진이 업로드되지 않았습니다!", "workImgFrtUrl");
 		return false;
 	}
 	
-	if(document.getElementById("workImgRerUrl1").src == null || document.getElementById("workImgRerUrl1").src == ""){
+	/* if(document.getElementById("workImgRerUrl1").src == null || document.getElementById("workImgRerUrl1").src == ""){
 		modalAlertShow("작품 후면 사진이 업로드되지 않았습니다!", "workImgRerUrl");
 		return false;
-	}
+	} */
 	
 	if($('input:radio[name=workFrmYn]').is(':checked')){
 		result.workFrmYn = $('input[name=workFrmYn]:checked').val();
