--- a/src/main/resources/templates/thymeleaf/fo/about/terms_1.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/terms_1.html
@@ -21,7 +21,7 @@
 					<ul class="nav nav-tabs">
 						<li class='active'><a href="#">이용약관</a></li>
 						<li><a href="/privacyPolicy">개인정보처리방침</a></li>
-						<li><a href="/marketing">마케팅및광고성</a></li>
+						<li><a href="/marketing">마케팅 및 광고성 정보 수신에 대한 동의</a></li>
 					</ul>
 					<div class="tab-content">
 						<div class="tab-pane fade in active" id="tabmenu_01">
