--- a/src/main/resources/templates/thymeleaf/fo/about/terms_2.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/terms_2.html
@@ -3,6 +3,13 @@
 
 <head>
 	<link rel="icon" type="image/png" href="/resources/img/favicon.png">
+	
+	<style type="text/css">
+		.dPointer{
+			font-size:0.5em;
+		}
+    </style>
+	
 </head>
 
 <body>
@@ -19,7 +26,7 @@
 					<ul class="nav nav-tabs">
 						<li><a href="/termOfService">이용약관</a></li>
 						<li class='active'><a href="#">개인정보처리방침</a></li>
-						<li><a href="/marketing">마케팅및광고성</a></li>
+						<li><a href="/marketing">마케팅 및 광고성 정보 수신에 대한 동의</a></li>
 					</ul>
 					<div class="tab-content">
 						
@@ -27,31 +34,33 @@
 							<h3>개인정보 처리방침</h3><br/>
 								
 							<딜링아트>('www.dealing-art.com' 이하 '딜링아트 닷컴')은(는) 「개인정보 보호법」 제30조에 따라 정보주체의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다.<br/>
-							
+							<br>
 							○ 이 개인정보처리방침은 2022년 [*]월 [*]일 부터 적용됩니다.<br/><br/>
 							
 							<p>제1조 개인정보의 처리 목적</p>
+							<br>
 							딜링아트 닷컴은 다음의 목적을 위하여 개인정보를 처리합니다. 처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지 않으며 이용 목적이 변경되는 경우에는 「개인정보 보호법」 제18조에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.<br/><br/>
 							
 							1. 홈페이지 회원가입 및 관리<br/>
-							회원 가입의사 확인, 회원제 서비스 제공에 따른 본인 식별·인증, 회원자격 유지·관리, 서비스 부정이용 방지, 만14세 미만 아동의 개인정보 처리 시 법정대리인의 동의여부 확인, 각종 고지·통지, 고충처리 목적으로 개인정보를 처리합니다.<br/><br/>
+							&emsp;회원 가입의사 확인, 회원제 서비스 제공에 따른 본인 식별·인증, 회원자격 유지·관리, 서비스 부정이용 방지, 만14세 미만 아동의 개인정보 처리 시 법정대리인의 동의여부 확인, 각종 고지·통지, 고충처리 목적으로 개인정보를 처리합니다.<br/><br/>
 							
 							2. 서비스 제공<br/>
-							작품 배송, 서비스 제공, 계약서·청구서 발송, 콘텐츠 제공, 맞춤서비스 제공, 본인인증, 연령인증, 대금결제·정산, 거래확인서 작성, 응찰신청 적격확인, 현금영수증, 세금계산서 발급, 영세율 적용대상 등의 확인을 목적으로 개인정보를 처리합니다.<br/><br/>
+							&emsp;작품 배송, 서비스 제공, 계약서·청구서 발송, 콘텐츠 제공, 맞춤서비스 제공, 본인인증, 연령인증, 대금결제·정산, 거래확인서 작성, 응찰신청 적격확인, 현금영수증, 세금계산서 발급, 영세율 적용대상 등의 확인을 목적으로 개인정보를 처리합니다.<br/><br/>
 							
 							3. 마케팅 및 광고에의 활용<br/>
-							신규 서비스 개발 및 맞춤 서비스 제공, 이벤트 및 광고성 정보 제공 및 참여기회 제공, 인구통계학적 특성에 따른 서비스 제공 및 광고 게재, 서비스의 유효성 확인, 접속빈도 파악 또는 회원의 서비스 이용에 대한 통계 등을 목적으로 개인정보를 처리합니다.<br/><br/>
+							&emsp;신규 서비스 개발 및 맞춤 서비스 제공, 이벤트 및 광고성 정보 제공 및 참여기회 제공, 인구통계학적 특성에 따른 서비스 제공 및 광고 게재, 서비스의 유효성 확인, 접속빈도 파악 또는 회원의 서비스 이용에 대한 통계 등을 목적으로 개인정보를 처리합니다.<br/><br/>
 							
 							4. 고충처리 <br/>
-							민원인의 신원 확인, 민원사항 확인, 사실조사를 위한 연락∙통지, 처리결과 통보 등의 목적으로 개인정보를 처리합니다.<br/><br/>
+							&emsp;민원인의 신원 확인, 민원사항 확인, 사실조사를 위한 연락∙통지, 처리결과 통보 등의 목적으로 개인정보를 처리합니다.<br/><br/>
 							
 							<p>제2조 개인정보의 처리 및 보유 기간</p>
-							
-							1 딜링아트 닷컴은 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집 시에 동의 받은 개인정보 보유·이용기간 내에서 개인정보를 처리·보유합니다. 법령에 따라 개인정보를 파기하지 않고 일정기간 보존하는 경우에는 해당 개인정보를 별도의 데이터베이스(DB)에 옮기거나 보관장소를 달리하여 보존합니다.<br/><br/>
+							<br>
+							1 딜링아트 닷컴은 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집 시에 동의 받은 개인정보 보유·이용기간 내에서 개인정보를 처리·보유합니다.<br> 
+							&emsp;법령에 따라 개인정보를 파기하지 않고 일정기간 보존하는 경우에는 해당 개인정보를 별도의 데이터베이스(DB)에 옮기거나 보관장소를 달리하여 보존합니다.<br/><br/>
 							2 각각의 개인정보 처리 및 보유 기간은 다음 각 호와 같습니다.<br/><br/>
 							
 							&emsp;1. 서비스 제공을 위해 수집한 회원가입 정보: 회원 탈퇴시까지<br/>
-							&emsp; 단, 정당한 사유가 있는 경우 회원 탈퇴 후 30일까지 개인정보를 보유할 수 있습니다.<br/><br/>
+							&emsp;&emsp;단, 정당한 사유가 있는 경우 회원 탈퇴 후 30일까지 개인정보를 보유할 수 있습니다.<br/><br/>
 							
 							&emsp;2. 관계 법령 위반에 따른 수사∙조사 등이 진행중인 경우: 해당 수사∙조사 종료시까지<br/><br/>
 							
@@ -59,24 +68,24 @@
 							
 							&emsp;4. 관련 법령에 의한 개인정보 보유 (아래는 예시에 해당하며, 기타 개별 법령 또는 규칙 등이 별도의 보관기간을 요구하는 경우 그 기간까지 보관합니다)<br/><br/>
 							&emsp;&emsp;1. 통신비밀보호법<br/>
-							&emsp;&emsp;&emsp;● 서비스 이용기록, 접속로그, 접속IP정보 : 3개월<br/><br/>
+							&emsp;&emsp;&emsp;<span class="dPointer"><span class="dPointer">●</span></span> 서비스 이용기록, 접속로그, 접속IP정보 : 3개월<br/><br/>
 							
 							&emsp;&emsp;2. 전자상거래 등에서의 소비자보호에 관한 법률<br/>
-							&emsp;&emsp;&emsp;● 표시∙광고에 관한 기록 : 6개월<br/>
-							&emsp;&emsp;&emsp;● 계약 또는 청약철회 등에 관한 기록 : 5년<br/>
-							&emsp;&emsp;&emsp;● 대금결제 및 서비스 등의 공급에 관한 기록 : 5년<br/>
-							&emsp;&emsp;&emsp;● 소비자의 불만 또는 분쟁처리에 관한 기록 : 3년<br/><br/>
+							&emsp;&emsp;&emsp;<span class="dPointer">●</span> 표시∙광고에 관한 기록 : 6개월<br/>
+							&emsp;&emsp;&emsp;<span class="dPointer">●</span> 계약 또는 청약철회 등에 관한 기록 : 5년<br/>
+							&emsp;&emsp;&emsp;<span class="dPointer">●</span> 대금결제 및 서비스 등의 공급에 관한 기록 : 5년<br/>
+							&emsp;&emsp;&emsp;<span class="dPointer">●</span> 소비자의 불만 또는 분쟁처리에 관한 기록 : 3년<br/><br/>
 							
 							&emsp;&emsp;3. 국세기본법 <br/>
-							&emsp;&emsp;&emsp;● 국세 부과 제척기간 계산을 위해 필요한 정보 : 10년<br/>
-							&emsp;&emsp;&emsp;● 국세징수권 등 소멸시효 계산을 위해 필요한 정보 : 5년<br/>
-							&emsp;&emsp;&emsp;● 원천징수사무처리를 위해 필요한 정보 : 5년<br/><br/>
+							&emsp;&emsp;&emsp;<span class="dPointer">●</span> 국세 부과 제척기간 계산을 위해 필요한 정보 : 10년<br/>
+							&emsp;&emsp;&emsp;<span class="dPointer">●</span> 국세징수권 등 소멸시효 계산을 위해 필요한 정보 : 5년<br/>
+							&emsp;&emsp;&emsp;<span class="dPointer">●</span> 원천징수사무처리를 위해 필요한 정보 : 5년<br/><br/>
 							
 							&emsp;&emsp;4. 전자금융거래법<br/>
-							&emsp;&emsp;&emsp;● 전자금융거래에 관한 기록 및 상대방 정보 : 5년<br/><br/>
+							&emsp;&emsp;&emsp;<span class="dPointer">●</span> 전자금융거래에 관한 기록 및 상대방 정보 : 5년<br/><br/>
 							
 							&emsp;&emsp;5. 부가가치세법<br/>
-							&emsp;&emsp;&emsp;● 세금계산서, 영수증 등 거래내역 관련 정보 : 5년<br/><br/>
+							&emsp;&emsp;&emsp;<span class="dPointer">●</span> 세금계산서, 영수증 등 거래내역 관련 정보 : 5년<br/><br/>
 							 
 							<p>제3조 개인정보의 제3자 제공</p>
 							
@@ -92,7 +101,7 @@
 							4 개인정보의 제3자 제공에 대해 동의하지 않을 수 있고 언제든지 제3자 제공 동의를 철회할 수 있습니다. 다만, 회원가입을 제외한 제3자 제공에 기반한 관련된 일부 서비스의 이용이 제한될 수 있음을 알려드립니다.<br/><br/>
 							
 							<p>제4조 개인정보처리 위탁</p> 
-							
+							<br>
 							1 딜링아트 닷컴은 원활한 개인정보 업무처리를 위하여 다음과 같이 개인정보 처리업무를 위탁하고 있습니다.<br/><br/>
 							
 							<table class="tstyle4">
@@ -164,7 +173,7 @@
 							필요한 경우 위탁업무의 내용이나 수탁자가 추가, 제거 또는 변경될 수 있으며 이 경우에는 지체 없이 이 개인정보 처리방침을 통하여 공개하도록 하겠습니다.<br/> -->
 							
 							<p>제5조 정보주체와 법정대리인의 권리·의무 및 그 행사방법</p>
-							
+							<br>
 							1 정보주체는 딜링아트 닷컴에 대해 언제든지 다음 각 호의 개인정보 관련 권리를 행사할 수 있습니다. <br/>
 							&emsp;1. 개인정보의 열람, 정정 및 삭제<br/>
 							&emsp;2. 개인정보 처리정지 요구 <br/>
@@ -179,90 +188,98 @@
 							6 정보주체는 개인정보 보호법 등 관계법령을 위반하여 회사가 처리하고 있는 정보주체 본인이나 타인의 개인정보 및 사생활을 침해하여서는 아니됩니다.<br/><br/>
 							
 							<p>제6조 처리하는 개인정보의 항목</p>
-							
+							<br>
 							1 딜링아트 닷컴은 다음의 개인정보 항목을 처리하고 있습니다.<br/>
 							&emsp;1. 홈페이지 회원가입<br/>
 							&emsp;&emsp;1. 개인의 경우<br/>
-							&emsp;&emsp;&emsp;● 필수항목: 성명, 생년월일, 이메일, 아이디, 비밀번호 <br/>
-							&emsp;&emsp;&emsp;● 선택항목: 미술 관심분야, 기념일, 직업, 직장명, 직장 전화 번호, 직장 주소<br/><br/>
+							&emsp;&emsp;&emsp;<span class="dPointer">●</span> 필수항목: 성명, 생년월일, 이메일, 아이디, 비밀번호 <br/>
+							&emsp;&emsp;&emsp;<span class="dPointer">●</span> 선택항목: 미술 관심분야, 기념일, 직업, 직장명, 직장 전화 번호, 직장 주소<br/><br/>
 							&emsp;&emsp;2. 작가의 경우<br/>
-							&emsp;&emsp;&emsp;● 필수항목: 성명, 생년월일, 이메일, 아이디, 비밀번호<br/>
-							&emsp;&emsp;&emsp;● 선택항목: 프로필 이미지, 활동명, 활동분야, 기념일, 작품정보, 작가 본인의 정보(이력, 협회가입유무 등) <br/><br/>
+							&emsp;&emsp;&emsp;<span class="dPointer">●</span> 필수항목: 성명, 생년월일, 이메일, 아이디, 비밀번호<br/>
+							&emsp;&emsp;&emsp;<span class="dPointer">●</span> 선택항목: 프로필 이미지, 활동명, 활동분야, 기념일, 작품정보, 작가 본인의 정보(이력, 협회가입유무 등) <br/><br/>
 							
 							2. 서비스 제공 <br/>
 							&emsp;1. 작품 대금 결제 <br/>
-							&emsp;&emsp;● 필수항목: 성명, 전화번호, 신용카드 정보(카드사명, 카드번호), 은행계좌 정보 <br/>
-							&emsp;&emsp;● 선택항목: 현금영수증 정보(주민등록번호 또는 휴대전화번호, 사업자의 경우 법인명/사업자등록번호/대표자명/본점 소재지/이메일 주소), 세금계산서 정보(주민등록번호), 영세율 적용 대상자 정보(여권 정보 또는 해외 사업자등록증 또는 해외 신분증 기재정보, 출입국증명서 기재정보), 개인통관부호<br/><br/>
+							&emsp;&emsp;<span class="dPointer">●</span> 필수항목: 성명, 전화번호, 신용카드 정보(카드사명, 카드번호), 은행계좌 정보 <br/>
+							&emsp;&emsp;<span class="dPointer">●</span> 선택항목: 현금영수증 정보(주민등록번호 또는 휴대전화번호, 사업자의 경우 법인명/사업자등록번호/대표자명/본점 소재지/이메일 주소), 세금계산서 정보(주민등록번호), 영세율 적용 대상자 정보(여권 정보 또는 해외 사업자등록증 또는 해외 신분증 기재정보, 출입국증명서 기재정보), 개인통관부호<br/><br/>
 							&emsp;2. 운송 서비스 <br/>
-							&emsp;&emsp;● 필수항목: 성명, 전화번호, 배송지 주소<br/>
+							&emsp;&emsp;<span class="dPointer">●</span> 필수항목: 성명, 전화번호, 배송지 주소<br/>
 							&emsp;3. 인보이스 작성<br/>
-							&emsp;&emsp;● 필수항목: 성명, 전화번호, 주소, 대리인의 이름<br/><br/>
+							&emsp;&emsp;<span class="dPointer">●</span> 필수항목: 성명, 전화번호, 주소, 대리인의 이름<br/><br/>
 							
 							3. 마케팅 및 광고에의 활용 <br/>
-							선택항목: 이메일, 휴대전화번호, 아이디, 성별, 생년월일, 이름<br/><br/>
+							&emsp;선택항목: 이메일, 휴대전화번호, 아이디, 성별, 생년월일, 이름<br/><br/>
 							
 							이외에도 인터넷 서비스 이용과정에서 아래 개인정보 항목이 자동으로 생성되어 수집될 수 있습니다.<br/>
 							 IP주소, 쿠키, MAC주소, 서비스 이용기록, 방문기록, 불량 이용기록 등<br/>
 							
 							<p>제7조 개인정보의 파기</p>
-							딜링아트 닷컴은 개인정보 보유기간의 경과, 처리목적 달성 등 개인정보가 불필요하게 되었을 때에는 지체없이(5일 이내) 해당 개인정보를 파기합니다.<br/>
-							정보주체로부터 동의 받은 개인정보 보유기간이 경과하거나 처리목적이 달성되었음에도 불구하고 다른 법령에 따라 개인정보를 계속 보존하여야 하는 경우에는, 해당 개인정보를 별도의 데이터베이스(DB)로 옮기거나 보관장소를 달리하여 보존합니다. <br/>
-							개인정보 파기의 절차 및 방법은 다음과 같습니다.<br/>
-							파기절차: 딜링아트 닷컴은 파기 사유가 발생한 개인정보를 선정하고, 딜링아트 닷컴의 개인정보 보호책임자의 승인을 받아 개인정보를 파기합니다. 이 때 이용자가 입력한 정보는 목적 달성 후 별도의 DB에 옮겨져 (종이의 경우 별도의 서류) 내부 방침 및 기타 관련 법령에 따라 일정기간 저장된 후 혹은 즉시 파기됩니다. DB로 옮겨진 개인정보는 법률에 의한 경우가 아니고서는 다른 목적으로 이용되지 않습니다.<br/>
-							파기방법: 전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용합니다. 종이에 출력된 개인정보는 분쇄기로 분쇄하거나 소각을 통하여 파기합니다.<br/><br/>
+							<br>
+							1 딜링아트 닷컴은 개인정보 보유기간의 경과, 처리목적 달성 등 개인정보가 불필요하게 되었을 때에는 지체없이(5일 이내) 해당 개인정보를 파기합니다.<br/>
+							2 정보주체로부터 동의 받은 개인정보 보유기간이 경과하거나 처리목적이 달성되었음에도 불구하고 다른 법령에 따라 개인정보를 계속 보존하여야 하는 경우에는, 해당 개인정보를 별도의 데이터베이스(DB)로 옮기거나 보관장소를 달리하여 보존합니다. <br/>
+							3 개인정보 파기의 절차 및 방법은 다음과 같습니다.<br/><br>
+							  &emsp;&emsp;1.파기절차: 딜링아트 닷컴은 파기 사유가 발생한 개인정보를 선정하고, 딜링아트 닷컴의 개인정보 보호책임자의 승인을 받아 개인정보를 파기합니다.
+							   <br>
+							   &emsp;&emsp;&emsp;이 때 이용자가 입력한 정보는 목적 달성 후 별도의 DB에 옮겨져 (종이의 경우 별도의 서류) 내부 방침 및 기타 관련 법령에 따라 일정기간 저장된 후 혹은 즉시 파기됩니다. 
+							   <br>
+							   &emsp;&emsp;&emsp;DB로 옮겨진 개인정보는 법률에 의한 경우가 아니고서는 다른 목적으로 이용되지 않습니다.<br/>
+							   <br>
+							  &emsp;&emsp;2.파기방법: 전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용합니다. 종이에 출력된 개인정보는 분쇄기로 분쇄하거나 소각을 통하여 파기합니다.<br/><br/>
 							
 							<p>제8조 개인정보의 안전성 확보 조치 </p>
-							
-							딜링아트 닷컴은 개인정보의 안전성 확보를 위해 다음과 같은 조치를 취하고 있습니다.<br/>
-							개인정보 취급 관련 안정성 확보를 위해 정기적으로 자체 감사를 실시하고 있습니다.<br/>
-							개인정보를 취급하는 직원을 지정하고 담당자에 한정시켜 최소화하여 개인정보를 관리하는 대책을 시행하고 있습니다.<br/>
-							개인정보의 안전한 처리를 위하여 내부관리계획을 수립하고 시행하고 있습니다.<br/>
-							딜링아트 닷컴은 해킹이나 컴퓨터 바이러스 등에 의한 개인정보 유출 및 훼손을 막기 위하여 보안프로그램을 설치하고 주기적인 갱신·점검을 하며 외부로부터 접근이 통제된 구역에 시스템을 설치하고 기술적/물리적으로 감시 및 차단하고 있습니다.<br/>
-							이용자의 개인정보는 비밀번호는 암호화되어 저장 및 관리되고 있어, 본인만이 알 수 있으며 중요한 데이터는 파일 및 전송 데이터를 암호화하거나 파일 잠금 기능을 사용하는 등의 별도 보안기능을 사용하고 있습니다.<br/>
-							개인정보처리시스템에 접속한 기록을 최소 1년 이상 보관, 관리하고 있으며, 접속기록이 위/변조 및 도난, 분실되지 않도록 보안기능을 사용하고 있습니다.<br/>
-							개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여, 변경, 말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고 있으며 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있습니다.<br/>
-							개인정보가 포함된 서류, 보조저장매체 등을 잠금 장치가 있는 안전한 장소에 보관하고 있습니다.<br/><br/>
+							<br>
+							딜링아트 닷컴은 개인정보의 안전성 확보를 위해 다음과 같은 조치를 취하고 있습니다.<br/><br>
+							&emsp;1 개인정보 취급 관련 안정성 확보를 위해 정기적으로 자체 감사를 실시하고 있습니다.<br/>
+							&emsp;2 개인정보를 취급하는 직원을 지정하고 담당자에 한정시켜 최소화하여 개인정보를 관리하는 대책을 시행하고 있습니다.<br/>
+							&emsp;3 개인정보의 안전한 처리를 위하여 내부관리계획을 수립하고 시행하고 있습니다.<br/>
+							&emsp;4 딜링아트 닷컴은 해킹이나 컴퓨터 바이러스 등에 의한 개인정보 유출 및 훼손을 막기 위하여 보안프로그램을 설치하고 주기적인 갱신·점검을 하며 외부로부터 접근이 통제된 구역에 시스템을 설치하고 기술적/물리적으로 감시 및 차단하고 있습니다.<br/>
+							&emsp;5 이용자의 개인정보는 비밀번호는 암호화되어 저장 및 관리되고 있어, 본인만이 알 수 있으며 중요한 데이터는 파일 및 전송 데이터를 암호화하거나 파일 잠금 기능을 사용하는 등의 별도 보안기능을 사용하고 있습니다.<br/>
+							&emsp;6 개인정보처리시스템에 접속한 기록을 최소 1년 이상 보관, 관리하고 있으며, 접속기록이 위/변조 및 도난, 분실되지 않도록 보안기능을 사용하고 있습니다.<br/>
+							&emsp;7 개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여, 변경, 말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고 있으며 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있습니다.<br/>
+							&emsp;8 개인정보가 포함된 서류, 보조저장매체 등을 잠금 장치가 있는 안전한 장소에 보관하고 있습니다.<br/><br/>
 							
 							<p>제9조 개인정보 자동 수집 장치의 설치∙운영 및 거부에 관한 사항</p>
+							<br>
+							&emsp;딜링아트 닷컴은 이용자에게 개별적인 맞춤서비스를 제공하기 위해 이용정보를 저장하고 수시로 불러오는 ‘쿠키(cookie)’를 사용합니다.<br> 
+							&emsp;딜링아트 닷컴이 쿠키를 통해 수집하는 정보는 회원의 고유번호(User ID)에 한하며 그 외의 다른 정보는 수집하지 않습니다.<br/>
+							&emsp;쿠키는 웹사이트를 운영하는데 이용되는 서버(http)가 이용자의 컴퓨터 브라우저에게 보내는 소량의 정보이며 이용자들의 PC 컴퓨터내의 하드디스크에 저장되기도 합니다.<br/>
+							&emsp;쿠키의 사용 목적: 이용자가 방문한 각 서비스와 웹 사이트들에 대한 방문 및 이용형태, 인기 검색어, 보안접속 여부, 등을 파악하여 이용자에게 최적화된 정보 제공을 위해 사용됩니다.<br/>
+							&emsp;쿠키의 설치∙운영 및 거부<br/>
+							&emsp;웹브라우저 상단의 도구>인터넷 옵션>개인정보 메뉴의 옵션 설정을 통해 쿠키 저장을 거부할 수 있습니다.<br/>
+							&emsp;쿠키 저장을 거부할 경우 맞춤형 서비스 이용에 어려움이 발생할 수 있습니다.<br/>
 							
-							딜링아트 닷컴은 이용자에게 개별적인 맞춤서비스를 제공하기 위해 이용정보를 저장하고 수시로 불러오는 ‘쿠키(cookie)’를 사용합니다. 딜링아트 닷컴이 쿠키를 통해 수집하는 정보는 회원의 고유번호(User ID)에 한하며 그 외의 다른 정보는 수집하지 않습니다.<br/>
-							쿠키는 웹사이트를 운영하는데 이용되는 서버(http)가 이용자의 컴퓨터 브라우저에게 보내는 소량의 정보이며 이용자들의 PC 컴퓨터내의 하드디스크에 저장되기도 합니다.<br/>
-							쿠키의 사용 목적: 이용자가 방문한 각 서비스와 웹 사이트들에 대한 방문 및 이용형태, 인기 검색어, 보안접속 여부, 등을 파악하여 이용자에게 최적화된 정보 제공을 위해 사용됩니다.<br/>
-							쿠키의 설치∙운영 및 거부<br/>
-							웹브라우저 상단의 도구>인터넷 옵션>개인정보 메뉴의 옵션 설정을 통해 쿠키 저장을 거부할 수 있습니다.<br/>
-							쿠키 저장을 거부할 경우 맞춤형 서비스 이용에 어려움이 발생할 수 있습니다.<br/>
-							
-							<p>제10조 개인정보 보호책임자</p>
+							<p>제10조 개인정보 보호책임자</p><br>
 							딜링아트 닷컴은 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.<br/><br/>
 							
 							▶ 개인정보 보호책임자<br/>
-							성명: 이영중<br/>
-							직책: 딜링아트 플랫폼 운영<br/>
-							직급: 이사<br/>
-							연락처: 070-4267-7373<br/>
+							&emsp;<span class="dPointer">●</span> 성명: 이영중<br/>
+							&emsp;<span class="dPointer">●</span> 직책: 딜링아트 플랫폼 운영<br/>
+							&emsp;<span class="dPointer">●</span> 직급: 이사<br/>
+							&emsp;<span class="dPointer">●</span> 연락처: 070-4267-7373<br/><br>
 							※ 개인정보 보호 담당부서로 연결됩니다.<br/><br/>
 							
 							▶ 개인정보 보호 담당부서<br/>
-							부서명: 딜링아트 플랫폼 운영<br/>
-							담당자: 이영중<br/>
-							연락처: 070-4267-7373<br/><br/>
+							&emsp;<span class="dPointer">●</span> 부서명: 딜링아트 플랫폼 운영<br/>
+							&emsp;<span class="dPointer">●</span> 담당자: 이영중<br/>
+							&emsp;<span class="dPointer">●</span> 연락처: 070-4267-7373<br/><br/>
 							
 							정보주체께서는 딜링아트 닷컴의 서비스를 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. 딜링아트 닷컴은 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다.<br/>
 							
-							<p>제11조 개인정보 열람청구 </p>
+							<p>제11조 개인정보 열람청구 </p><br>
 							정보주체는 ｢개인정보 보호법｣ 제35조에 따른 개인정보의 열람 청구를 아래의 부서에 할 수 있습니다. 딜링아트 닷컴은 정보주체의 개인정보 열람청구가 신속하게 처리되도록 노력하겠습니다. <br/><br/>
 							▶ 개인정보 열람청구 접수·처리 부서<br/>
-							부서명: 딜링아트 플랫폼 운영<br/>
-							담당자: 이영중<br/>
-							연락처: 070-4267-7373<br/>
+							&emsp;<span class="dPointer">●</span> 부서명: 딜링아트 플랫폼 운영<br/>
+							&emsp;<span class="dPointer">●</span> 담당자: 이영중<br/>
+							&emsp;<span class="dPointer">●</span> 연락처: 070-4267-7373<br/>
 							
 							<p>제12조 권익침해 구제방법</p>
+							<br>
 							정보주체는 개인정보침해로 인한 구제를 받기 위하여 개인정보분쟁조정위원회, 한국인터넷진흥원 개인정보침해신고센터 등에 분쟁해결이나 상담 등을 신청할 수 있습니다. 이 밖에 기타 개인정보침해의 신고, 상담에 대하여는 아래의 기관에 문의하시기 바랍니다.<br/><br/>
 							
-							개인정보분쟁조정위원회: (국번없이) 1833-6972 (www.kopico.go.kr)<br/>
-							개인정보침해신고센터: (국번없이) 118 (privacy.kisa.or.kr)<br/>
-							대검찰청: (국번없이) 1301 (www.spo.go.kr)<br/>
-							경찰청: (국번없이) 182 (ecrm.cyber.go.kr)<br/>
+							1. 개인정보분쟁조정위원회: (국번없이) 1833-6972 (www.kopico.go.kr)<br/>
+							2. 개인정보침해신고센터: (국번없이) 118 (privacy.kisa.or.kr)<br/>
+							3. 대검찰청: (국번없이) 1301 (www.spo.go.kr)<br/>
+							4. 경찰청: (국번없이) 182 (ecrm.cyber.go.kr)<br/>
 							
 							「개인정보보호법」제35조(개인정보의 열람), 제36조(개인정보의 정정·삭제), 제37조(개인정보의 처리정지 등)의 규정에 의한 요구에 대 하여 공공기관의 장이 행한 처분 또는 부작위로 인하여 권리 또는 이익의 침해를 받은 자는 행정심판법이 정하는 바에 따라 행정심판을 청구할 수 있습니다.<br/><br/>
 							
